@@ -25,12 +25,10 @@ import static org.apache.solr.common.params.CommonParams.SORT;
 import static org.apache.solr.common.util.JavaBinCodec.SOLRINPUTDOC;
 
 import java.io.BufferedOutputStream;
-import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
-import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -38,7 +36,6 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -55,19 +52,19 @@ import java.util.function.Consumer;
 import java.util.zip.GZIPOutputStream;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
+import org.apache.commons.cli.Options;
 import org.apache.lucene.util.SuppressForbidden;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.StreamingResponseCallback;
-import org.apache.solr.client.solrj.impl.CloudHttp2SolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.impl.ClusterStateProvider;
-import org.apache.solr.client.solrj.impl.Http2SolrClient;
-import org.apache.solr.client.solrj.impl.StreamingBinaryResponseParser;
+import org.apache.solr.client.solrj.jetty.HttpJettySolrClient;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.QueryRequest;
+import org.apache.solr.client.solrj.request.SolrQuery;
+import org.apache.solr.client.solrj.response.StreamingJavaBinResponseParser;
+import org.apache.solr.client.solrj.response.StreamingResponseCallback;
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.cloud.DocCollection;
@@ -75,8 +72,8 @@ import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.Slice;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.CursorMarkParams;
-import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
+import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.JavaBinCodec;
@@ -88,50 +85,85 @@ import org.noggit.JSONWriter;
 
 /** Supports export command in the bin/solr script. */
 public class ExportTool extends ToolBase {
+
+  private static final Option COLLECTION_NAME_OPTION =
+      Option.builder("c")
+          .longOpt("name")
+          .hasArg()
+          .argName("NAME")
+          .desc("Name of the collection.")
+          .get();
+
+  private static final Option OUTPUT_OPTION =
+      Option.builder()
+          .longOpt("output")
+          .hasArg()
+          .argName("PATH")
+          .desc(
+              "Path to output the exported data, and optionally the file name, defaults to 'collection-name'.")
+          .get();
+
+  private static final Option FORMAT_OPTION =
+      Option.builder()
+          .longOpt("format")
+          .hasArg()
+          .argName("FORMAT")
+          .desc("Output format for exported docs (json, jsonl or javabin), defaulting to json.")
+          .get();
+
+  private static final Option COMPRESS_OPTION =
+      Option.builder().longOpt("compress").desc("Compress the output. Defaults to false.").get();
+
+  private static final Option LIMIT_OPTION =
+      Option.builder()
+          .longOpt("limit")
+          .hasArg()
+          .argName("#")
+          .desc("Maximum number of docs to download. Default is 100, use -1 for all docs.")
+          .get();
+
+  private static final Option QUERY_OPTION =
+      Option.builder()
+          .longOpt("query")
+          .hasArg()
+          .argName("QUERY")
+          .desc("A custom query, default is '*:*'.")
+          .get();
+
+  private static final Option FIELDS_OPTION =
+      Option.builder()
+          .longOpt("fields")
+          .hasArg()
+          .argName("FIELDA,FIELDB")
+          .desc("Comma separated list of fields to export. By default all fields are fetched.")
+          .get();
+
+  public ExportTool(ToolRuntime runtime) {
+    super(runtime);
+  }
+
   @Override
   public String getName() {
     return "export";
   }
 
   @Override
-  public List<Option> getOptions() {
-    return List.of(
-        Option.builder("url")
-            .hasArg()
-            .required()
-            .desc("Address of the collection, example http://localhost:8983/solr/gettingstarted.")
-            .build(),
-        Option.builder("out")
-            .hasArg()
-            .required(false)
-            .desc(
-                "Path to output the exported data, and optionally the file name, defaults to 'collection-name'.")
-            .build(),
-        Option.builder("format")
-            .hasArg()
-            .required(false)
-            .desc("Output format for exported docs (json, jsonl or javabin), defaulting to json.")
-            .build(),
-        Option.builder("compress").required(false).desc("Compress the output.").build(),
-        Option.builder("limit")
-            .hasArg()
-            .required(false)
-            .desc("Maximum number of docs to download. Default is 100, use -1 for all docs.")
-            .build(),
-        Option.builder("query")
-            .hasArg()
-            .required(false)
-            .desc("A custom query, default is '*:*'.")
-            .build(),
-        Option.builder("fields")
-            .hasArg()
-            .required(false)
-            .desc("Comma separated list of fields to export. By default all fields are fetched.")
-            .build(),
-        SolrCLI.OPTION_CREDENTIALS);
+  public Options getOptions() {
+    return super.getOptions()
+        .addOption(COLLECTION_NAME_OPTION)
+        .addOption(OUTPUT_OPTION)
+        .addOption(FORMAT_OPTION)
+        .addOption(COMPRESS_OPTION)
+        .addOption(LIMIT_OPTION)
+        .addOption(QUERY_OPTION)
+        .addOption(FIELDS_OPTION)
+        .addOption(CommonCLIOptions.CREDENTIALS_OPTION)
+        .addOptionGroup(getConnectionOptions());
   }
 
   public abstract static class Info {
+    final ToolRuntime runtime;
+
     String baseurl;
     String credentials;
     String format;
@@ -143,12 +175,12 @@ public class ExportTool extends ToolBase {
     long limit = 100;
     AtomicLong docsWritten = new AtomicLong(0);
     int bufferSize = 1024 * 1024;
-    PrintStream output;
     String uniqueKey;
     CloudSolrClient solrClient;
     DocsSink sink;
 
-    public Info(String url, String credentials) {
+    public Info(ToolRuntime runtime, String url, String credentials) {
+      this.runtime = runtime;
       setUrl(url);
       setCredentials(credentials);
       setOutFormat(null, "jsonl", false);
@@ -185,45 +217,45 @@ public class ExportTool extends ToolBase {
       } else if (Files.isDirectory(Path.of(this.out))) {
         this.out = this.out + "/" + coll;
       }
-      this.out = this.out + '.' + this.format;
-      if (compress) {
+      if (!hasExtension(this.out)) {
+        this.out = this.out + '.' + this.format;
+      }
+      if (compress & !this.out.endsWith(".gz")) {
         this.out = this.out + ".gz";
       }
     }
 
+    public static boolean hasExtension(String filename) {
+      return filename.contains(".json")
+          || filename.contains(".jsonl")
+          || filename.contains(".javabin");
+    }
+
     DocsSink getSink() {
-      DocsSink docSink = null;
-      switch (format) {
-        case JAVABIN:
-          docSink = new JavabinSink(this);
-          break;
-        case JSON:
-          docSink = new JsonSink(this);
-          break;
-        case "jsonl":
-          docSink = new JsonWithLinesSink(this);
-          break;
-      }
-      return docSink;
+      return switch (format) {
+        case JAVABIN -> new JavabinSink(this);
+        case JSON -> new JsonSink(this);
+        case "jsonl" -> new JsonWithLinesSink(this);
+        default -> null;
+      };
     }
 
     abstract void exportDocs() throws Exception;
 
     void fetchUniqueKey() throws SolrServerException, IOException {
-      Http2SolrClient.Builder builder =
-          new Http2SolrClient.Builder().withOptionalBasicAuthCredentials(credentials);
+      var builder = new HttpJettySolrClient.Builder().withOptionalBasicAuthCredentials(credentials);
 
       solrClient =
-          new CloudHttp2SolrClient.Builder(Collections.singletonList(baseurl))
-              .withInternalClientBuilder(builder)
-              .build();
+          new CloudSolrClient.Builder(List.of(baseurl)).withHttpClientBuilder(builder).build();
       NamedList<Object> response =
           solrClient.request(
               new GenericSolrRequest(
                       SolrRequest.METHOD.GET,
                       "/schema/uniquekey",
-                      new MapSolrParams(Collections.singletonMap("collection", coll)))
-                  .setRequiresCollection(true));
+                      SolrRequest.SolrRequestType.ADMIN,
+                      SolrParams.of())
+                  .setRequiresCollection(true),
+              coll);
       uniqueKey = (String) response.get("uniqueKey");
     }
 
@@ -248,21 +280,79 @@ public class ExportTool extends ToolBase {
 
   @Override
   public void runImpl(CommandLine cli) throws Exception {
-    String url = cli.getOptionValue("url");
-    String credentials = cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt());
-    Info info = new MultiThreadedRunner(url, credentials);
-    info.query = cli.getOptionValue("query", "*:*");
+    String url;
+    if (CLIUtils.hasConnectionOption(cli)) {
+      if (!cli.hasOption(COLLECTION_NAME_OPTION)) {
+        throw new IllegalArgumentException(
+            "Must specify -c / --name parameter with a connection target to export documents.");
+      }
+      url = CLIUtils.normalizeSolrUrl(cli) + "/solr/" + cli.getOptionValue(COLLECTION_NAME_OPTION);
+
+    } else {
+      throw new IllegalArgumentException(
+          "Must specify a connection target via -s/--solr-connection, --solr-url, or --zk-host.");
+    }
+    String credentials = cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION);
+    Info info = new MultiThreadedRunner(runtime, url, credentials);
+    info.query = cli.getOptionValue(QUERY_OPTION, "*:*");
+
     info.setOutFormat(
-        cli.getOptionValue("out"), cli.getOptionValue("format"), cli.hasOption("compress"));
-    info.fields = cli.getOptionValue("fields");
-    info.setLimit(cli.getOptionValue("limit", "100"));
-    info.output = super.stdout;
+        cli.getOptionValue(OUTPUT_OPTION),
+        cli.getOptionValue(FORMAT_OPTION),
+        cli.hasOption(COMPRESS_OPTION));
+    info.fields = cli.getOptionValue(FIELDS_OPTION);
+    info.setLimit(cli.getOptionValue(LIMIT_OPTION, "100"));
     info.exportDocs();
   }
 
   abstract static class DocsSink {
     Info info;
     OutputStream fos;
+
+    /** Process a SolrDocument into a Map, handling special fields and date conversion. */
+    protected Map<String, Object> processDocument(SolrDocument doc) {
+      Map<String, Object> m = CollectionUtil.newLinkedHashMap(doc.size());
+      doc.forEach(
+          (s, field) -> {
+            if (s.equals("_version_") || s.equals("_roor_")) return;
+            if (field instanceof List) {
+              if (((List<?>) field).size() == 1) {
+                field = ((List<?>) field).getFirst();
+              }
+            }
+            field = constructDateStr(field);
+            if (field instanceof List<?> list) {
+              if (hasDate(list)) {
+                ArrayList<Object> listCopy = new ArrayList<>(list.size());
+                for (Object o : list) listCopy.add(constructDateStr(o));
+                field = listCopy;
+              }
+            }
+            m.put(s, field);
+          });
+      return m;
+    }
+
+    /** Check if a list contains any Date objects */
+    protected boolean hasDate(List<?> list) {
+      boolean hasDate = false;
+      for (Object o : list) {
+        if (o instanceof Date) {
+          hasDate = true;
+          break;
+        }
+      }
+      return hasDate;
+    }
+
+    /** Convert Date objects to ISO formatted strings */
+    protected Object constructDateStr(Object field) {
+      if (field instanceof Date) {
+        field =
+            DateTimeFormatter.ISO_INSTANT.format(Instant.ofEpochMilli(((Date) field).getTime()));
+      }
+      return field;
+    }
 
     abstract void start() throws IOException;
 
@@ -309,49 +399,11 @@ public class ExportTool extends ToolBase {
     @Override
     public synchronized void accept(SolrDocument doc) throws IOException {
       charArr.reset();
-      Map<String, Object> m = CollectionUtil.newLinkedHashMap(doc.size());
-      doc.forEach(
-          (s, field) -> {
-            if (s.equals("_version_") || s.equals("_roor_")) return;
-            if (field instanceof List) {
-              if (((List<?>) field).size() == 1) {
-                field = ((List<?>) field).get(0);
-              }
-            }
-            field = constructDateStr(field);
-            if (field instanceof List) {
-              List<?> list = (List<?>) field;
-              if (hasdate(list)) {
-                ArrayList<Object> listCopy = new ArrayList<>(list.size());
-                for (Object o : list) listCopy.add(constructDateStr(o));
-                field = listCopy;
-              }
-            }
-            m.put(s, field);
-          });
+      Map<String, Object> m = processDocument(doc);
       jsonWriter.write(m);
       writer.write(charArr.getArray(), charArr.getStart(), charArr.getEnd());
       writer.append('\n');
       super.accept(doc);
-    }
-
-    private boolean hasdate(List<?> list) {
-      boolean hasDate = false;
-      for (Object o : list) {
-        if (o instanceof Date) {
-          hasDate = true;
-          break;
-        }
-      }
-      return hasDate;
-    }
-
-    private Object constructDateStr(Object field) {
-      if (field instanceof Date) {
-        field =
-            DateTimeFormatter.ISO_INSTANT.format(Instant.ofEpochMilli(((Date) field).getTime()));
-      }
-      return field;
     }
   }
 
@@ -389,26 +441,7 @@ public class ExportTool extends ToolBase {
     @Override
     public synchronized void accept(SolrDocument doc) throws IOException {
       charArr.reset();
-      Map<String, Object> m = CollectionUtil.newLinkedHashMap(doc.size());
-      doc.forEach(
-          (s, field) -> {
-            if (s.equals("_version_") || s.equals("_roor_")) return;
-            if (field instanceof List) {
-              if (((List<?>) field).size() == 1) {
-                field = ((List<?>) field).get(0);
-              }
-            }
-            field = constructDateStr(field);
-            if (field instanceof List) {
-              List<?> list = (List<?>) field;
-              if (hasdate(list)) {
-                ArrayList<Object> listCopy = new ArrayList<>(list.size());
-                for (Object o : list) listCopy.add(constructDateStr(o));
-                field = listCopy;
-              }
-            }
-            m.put(s, field);
-          });
+      Map<String, Object> m = processDocument(doc);
       if (firstDoc) {
         firstDoc = false;
       } else {
@@ -418,25 +451,6 @@ public class ExportTool extends ToolBase {
       writer.write(charArr.getArray(), charArr.getStart(), charArr.getEnd());
       writer.append('\n');
       super.accept(doc);
-    }
-
-    private boolean hasdate(List<?> list) {
-      boolean hasDate = false;
-      for (Object o : list) {
-        if (o instanceof Date) {
-          hasDate = true;
-          break;
-        }
-      }
-      return hasDate;
-    }
-
-    private Object constructDateStr(Object field) {
-      if (field instanceof Date) {
-        field =
-            DateTimeFormatter.ISO_INSTANT.format(Instant.ofEpochMilli(((Date) field).getTime()));
-      }
-      return field;
     }
   }
 
@@ -507,8 +521,8 @@ public class ExportTool extends ToolBase {
     private final long startTime;
 
     @SuppressForbidden(reason = "Need to print out time")
-    public MultiThreadedRunner(String url, String credentials) {
-      super(url, credentials);
+    public MultiThreadedRunner(ToolRuntime runtime, String url, String credentials) {
+      super(runtime, url, credentials);
       startTime = System.currentTimeMillis();
     }
 
@@ -531,18 +545,16 @@ public class ExportTool extends ToolBase {
       try {
         addConsumer(consumerlatch);
         addProducers(m);
-        if (output != null) {
-          output.println("Number of shards : " + corehandlers.size());
-        }
+        runtime.println("Number of shards : " + corehandlers.size());
         CountDownLatch producerLatch = new CountDownLatch(corehandlers.size());
         corehandlers.forEach(
             (s, coreHandler) ->
-                producerThreadpool.submit(
+                producerThreadpool.execute(
                     () -> {
                       try {
                         coreHandler.exportDocsFromCore();
                       } catch (Exception e) {
-                        if (output != null) output.println("Error exporting docs from : " + s);
+                        runtime.println("Error exporting docs from : " + s);
                       }
                       producerLatch.countDown();
                     }));
@@ -557,7 +569,7 @@ public class ExportTool extends ToolBase {
         consumerThreadpool.shutdownNow();
         if (failed) {
           try {
-            Files.delete(new File(out).toPath());
+            Files.delete(Path.of(out));
           } catch (IOException e) {
             // ignore
           }
@@ -583,14 +595,14 @@ public class ExportTool extends ToolBase {
     }
 
     private void addConsumer(CountDownLatch consumerlatch) {
-      consumerThreadpool.submit(
+      consumerThreadpool.execute(
           () -> {
             while (true) {
               SolrDocument doc;
               try {
                 doc = queue.poll(30, TimeUnit.SECONDS);
               } catch (InterruptedException e) {
-                if (output != null) output.println("Consumer interrupted");
+                runtime.println("Consumer interrupted");
                 failed = true;
                 break;
               }
@@ -601,7 +613,7 @@ public class ExportTool extends ToolBase {
                 }
                 sink.accept(doc);
               } catch (Exception e) {
-                if (output != null) output.println("Failed to write to file " + e.getMessage());
+                runtime.println("Failed to write to file " + e.getMessage());
                 failed = true;
               }
             }
@@ -618,9 +630,9 @@ public class ExportTool extends ToolBase {
         this.replica = replica;
       }
 
-      boolean exportDocsFromCore() throws IOException, SolrServerException {
-
-        try (SolrClient client = SolrCLI.getSolrClient(baseurl, credentials)) {
+      void exportDocsFromCore() throws IOException, SolrServerException {
+        // reference the replica's node URL, not the baseUrl in scope, which could be anywhere
+        try (SolrClient client = CLIUtils.getSolrClient(replica.getBaseUrl(), credentials)) {
           expectedDocs = getDocCount(replica.getCoreName(), client, query);
           QueryRequest request;
           ModifiableSolrParams params = new ModifiableSolrParams();
@@ -637,14 +649,14 @@ public class ExportTool extends ToolBase {
                   receivedDocs.incrementAndGet();
                 } catch (InterruptedException e) {
                   failed = true;
-                  if (output != null) output.println("Failed to write docs from" + e.getMessage());
+                  runtime.println("Failed to write docs from" + e.getMessage());
                 }
               };
-          StreamingBinaryResponseParser responseParser =
-              new StreamingBinaryResponseParser(getStreamer(wrapper));
+          StreamingJavaBinResponseParser responseParser =
+              new StreamingJavaBinResponseParser(getStreamer(wrapper));
           while (true) {
-            if (failed) return false;
-            if (docsWritten.get() > limit) return true;
+            if (failed) return;
+            if (docsWritten.get() > limit) return;
             params.set(CursorMarkParams.CURSOR_MARK_PARAM, cursorMark);
             request = new QueryRequest(params);
             request.setResponseParser(responseParser);
@@ -652,34 +664,29 @@ public class ExportTool extends ToolBase {
               NamedList<Object> rsp = client.request(request, replica.getCoreName());
               String nextCursorMark = (String) rsp.get(CursorMarkParams.CURSOR_MARK_NEXT);
               if (nextCursorMark == null || Objects.equals(cursorMark, nextCursorMark)) {
-                if (output != null) {
-                  output.println(
-                      StrUtils.formatString(
-                          "\nExport complete from shard {0}, core {1}, docs received: {2}",
-                          replica.getShard(), replica.getCoreName(), receivedDocs.get()));
-                }
+                runtime.println(
+                    StrUtils.formatString(
+                        "\nExport complete from shard {0}, core {1}, docs received: {2}",
+                        replica.getShard(), replica.getCoreName(), receivedDocs.get()));
                 if (expectedDocs != receivedDocs.get()) {
-                  if (output != null) {
-                    output.println(
-                        StrUtils.formatString(
-                            "Could not download all docs from core {0}, docs expected: {1}, received: {2}",
-                            replica.getCoreName(), expectedDocs, receivedDocs.get()));
-                    return false;
-                  }
+                  runtime.println(
+                      StrUtils.formatString(
+                          "Could not download all docs from core {0}, docs expected: {1}, received: {2}",
+                          replica.getCoreName(), expectedDocs, receivedDocs.get()));
+                  return;
                 }
-                return true;
+                return;
               }
               cursorMark = nextCursorMark;
-              if (output != null) output.print(".");
+              runtime.print(".");
             } catch (SolrServerException e) {
-              if (output != null)
-                output.println(
-                    "Error reading from server "
-                        + replica.getBaseUrl()
-                        + "/"
-                        + replica.getCoreName());
+              runtime.println(
+                  "Error reading from server "
+                      + replica.getBaseUrl()
+                      + "/"
+                      + replica.getCoreName());
               failed = true;
-              return false;
+              return;
             }
           }
         }
