@@ -18,7 +18,11 @@ package org.apache.solr.cloud;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.SimpleFileVisitor;
+import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -26,12 +30,9 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import org.apache.solr.client.solrj.cloud.SolrCloudManager;
-import org.apache.solr.cloud.api.collections.CreateCollectionCmd;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkMaintenanceUtils;
-import org.apache.solr.common.cloud.ZkStateReader;
-import org.apache.solr.common.cloud.ZooKeeperException;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.ConfigSetProperties;
@@ -71,36 +72,18 @@ public class ZkConfigSetService extends ConfigSetService {
 
   @Override
   public SolrResourceLoader createCoreResourceLoader(CoreDescriptor cd) {
-    final String colName = cd.getCollectionName();
-
-    // For back compat with cores that can create collections without the collections API
-    try {
-      if (!zkClient.exists(ZkStateReader.COLLECTIONS_ZKNODE + "/" + colName, true)) {
-        // TODO remove this functionality or maybe move to a CLI mechanism
-        log.warn(
-            "Auto-creating collection (in ZK) from core descriptor (on disk).  This feature may go away!");
-        CreateCollectionCmd.createCollectionZkNode(
-            zkController.getSolrCloudManager().getDistribStateManager(),
-            colName,
-            cd.getCloudDescriptor().getParams(),
-            zkController.getCoreContainer().getConfigSetService());
-      }
-    } catch (InterruptedException e) {
-      Thread.currentThread().interrupt();
-      throw new ZooKeeperException(
-          SolrException.ErrorCode.SERVER_ERROR, "Interrupted auto-creating collection", e);
-    } catch (KeeperException e) {
-      throw new ZooKeeperException(
-          SolrException.ErrorCode.SERVER_ERROR, "Failure auto-creating collection", e);
+    // Currently, cd.getConfigSet() is always null. Except that it's explicitly set by
+    // {@link org.apache.solr.core.SyntheticSolrCore}.
+    // Should we consider setting it for all cores as a part of CoreDescriptor creation/loading
+    // process?
+    if (cd.getConfigSet() == null) {
+      String configSetName =
+          zkController.getClusterState().getCollection(cd.getCollectionName()).getConfigName();
+      cd.setConfigSet(configSetName);
     }
 
-    // The configSet is read from ZK and populated.  Ignore CD's pre-existing configSet; only
-    // populated in standalone
-    String configSetName = zkController.getClusterState().getCollection(colName).getConfigName();
-    cd.setConfigSet(configSetName);
-
     return new ZkSolrResourceLoader(
-        cd.getInstanceDir(), configSetName, parentLoader.getClassLoader(), zkController);
+        cd.getInstanceDir(), cd.getConfigSet(), parentLoader.getClassLoader(), zkController);
   }
 
   @Override
@@ -120,7 +103,7 @@ public class ZkConfigSetService extends ConfigSetService {
     String zkPath = CONFIGS_ZKNODE + "/" + configSet + "/" + schemaFile;
     Stat stat;
     try {
-      stat = zkClient.exists(zkPath, null, true);
+      stat = zkClient.exists(zkPath, null);
     } catch (KeeperException e) {
       log.warn("Unexpected exception when getting modification time of {}", zkPath, e);
       return null; // debatable; we'll see an error soon if there's a real problem
@@ -142,7 +125,7 @@ public class ZkConfigSetService extends ConfigSetService {
   @Override
   public boolean checkConfigExists(String configName) throws IOException {
     try {
-      return zkClient.exists(CONFIGS_ZKNODE + "/" + configName, true);
+      return zkClient.exists(CONFIGS_ZKNODE + "/" + configName);
     } catch (KeeperException | InterruptedException e) {
       throw new IOException(
           "Error checking whether config exists", SolrZkClient.checkInterrupted(e));
@@ -189,6 +172,22 @@ public class ZkConfigSetService extends ConfigSetService {
 
   @Override
   public void uploadConfig(String configName, Path dir) throws IOException {
+    Files.walkFileTree(
+        dir,
+        new SimpleFileVisitor<>() {
+          @Override
+          public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
+            String filename = file.getFileName().toString();
+            if (ConfigSetService.isFileForbiddenInConfigSets(filename)) {
+              throw new SolrException(
+                  SolrException.ErrorCode.BAD_REQUEST,
+                  "The file type provided for upload, '"
+                      + filename
+                      + "', is forbidden for use in uploading configsets.");
+            }
+            return FileVisitResult.CONTINUE;
+          }
+        });
     zkClient.uploadToZK(
         dir, CONFIGS_ZKNODE + "/" + configName, ConfigSetService.UPLOAD_FILENAME_EXCLUDE_PATTERN);
   }
@@ -199,8 +198,12 @@ public class ZkConfigSetService extends ConfigSetService {
       throws IOException {
     String filePath = CONFIGS_ZKNODE + "/" + configName + "/" + fileName;
     try {
-      if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(fileName)) {
-        log.warn("Not including uploading file to config, as it is a forbidden type: {}", fileName);
+      if (ConfigSetService.isFileForbiddenInConfigSets(fileName)) {
+        throw new SolrException(
+            SolrException.ErrorCode.BAD_REQUEST,
+            "The file type provided for upload, '"
+                + fileName
+                + "', is forbidden for use in uploading configsets.");
       } else if (FileTypeMagicUtil.isFileForbiddenInConfigset(data)) {
         String mimeType = FileTypeMagicUtil.INSTANCE.guessMimeType(data);
         throw new SolrException(
@@ -212,7 +215,7 @@ public class ZkConfigSetService extends ConfigSetService {
                 mimeType));
       } else {
         // if overwriteOnExists is true then zkClient#makePath failOnExists is set to false
-        zkClient.makePath(filePath, data, CreateMode.PERSISTENT, null, !overwriteOnExists, true);
+        zkClient.makePath(filePath, data, CreateMode.PERSISTENT, null, !overwriteOnExists);
       }
     } catch (KeeperException.NodeExistsException nodeExistsException) {
       throw new SolrException(
@@ -236,8 +239,7 @@ public class ZkConfigSetService extends ConfigSetService {
           Utils.toJSON(data),
           CreateMode.PERSISTENT,
           null,
-          false,
-          true);
+          false);
     } catch (KeeperException | InterruptedException e) {
       throw new IOException("Error setting config metadata", SolrZkClient.checkInterrupted(e));
     }
@@ -249,8 +251,10 @@ public class ZkConfigSetService extends ConfigSetService {
       @SuppressWarnings("unchecked")
       Map<String, Object> data =
           (Map<String, Object>)
-              Utils.fromJSON(zkClient.getData(CONFIGS_ZKNODE + "/" + configName, null, null, true));
+              Utils.fromJSON(zkClient.getData(CONFIGS_ZKNODE + "/" + configName, null, null));
       return data;
+    } catch (KeeperException.NoNodeException e) {
+      return Map.of();
     } catch (KeeperException | InterruptedException e) {
       throw new IOException("Error getting config metadata", SolrZkClient.checkInterrupted(e));
     }
@@ -264,7 +268,7 @@ public class ZkConfigSetService extends ConfigSetService {
   @Override
   public byte[] downloadFileFromConfig(String configName, String filePath) throws IOException {
     try {
-      return zkClient.getData(CONFIGS_ZKNODE + "/" + configName + "/" + filePath, null, null, true);
+      return zkClient.getData(CONFIGS_ZKNODE + "/" + configName + "/" + filePath, null, null);
     } catch (KeeperException.NoNodeException e) {
       return null;
     } catch (KeeperException | InterruptedException e) {
@@ -275,9 +279,9 @@ public class ZkConfigSetService extends ConfigSetService {
   @Override
   public List<String> listConfigs() throws IOException {
     try {
-      return zkClient.getChildren(CONFIGS_ZKNODE, null, true);
+      return zkClient.getChildren(CONFIGS_ZKNODE, null);
     } catch (KeeperException.NoNodeException e) {
-      return Collections.emptyList();
+      return List.of();
     } catch (KeeperException | InterruptedException e) {
       throw new IOException("Error listing configs", SolrZkClient.checkInterrupted(e));
     }
@@ -322,9 +326,9 @@ public class ZkConfigSetService extends ConfigSetService {
 
   private void copyConfigDirFromZk(String fromZkPath, String toZkPath) throws IOException {
     try {
-      List<String> files = zkClient.getChildren(fromZkPath, null, true);
+      List<String> files = zkClient.getChildren(fromZkPath, null);
       for (String file : files) {
-        List<String> children = zkClient.getChildren(fromZkPath + "/" + file, null, true);
+        List<String> children = zkClient.getChildren(fromZkPath + "/" + file, null);
         if (children.size() == 0) {
           copyData(fromZkPath + "/" + file, toZkPath + "/" + file);
         } else {
@@ -340,17 +344,17 @@ public class ZkConfigSetService extends ConfigSetService {
 
   private void copyData(String fromZkFilePath, String toZkFilePath)
       throws KeeperException, InterruptedException {
-    if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(fromZkFilePath)) {
+    if (ConfigSetService.isFileForbiddenInConfigSets(fromZkFilePath)) {
       log.warn(
           "Skipping copy of file in ZK, as the source file is a forbidden type: {}",
           fromZkFilePath);
-    } else if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(toZkFilePath)) {
+    } else if (ConfigSetService.isFileForbiddenInConfigSets(toZkFilePath)) {
       log.warn(
           "Skipping download of file from ZK, as the target file is a forbidden type: {}",
           toZkFilePath);
     } else {
       log.debug("Copying zk node {} to {}", fromZkFilePath, toZkFilePath);
-      byte[] data = zkClient.getData(fromZkFilePath, null, null, true);
+      byte[] data = zkClient.getData(fromZkFilePath, null, null);
       if (!FileTypeMagicUtil.isFileForbiddenInConfigset(data)) {
         zkClient.makePath(toZkFilePath, data, true);
       } else {
