@@ -21,9 +21,7 @@ import java.lang.invoke.MethodHandles;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -41,10 +39,11 @@ import org.apache.solr.client.solrj.impl.SolrZkClientTimeout;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.SolrZkClient;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.logging.LogWatcherConfig;
 import org.apache.solr.search.CacheConfig;
-import org.apache.solr.servlet.SolrDispatchFilter;
+import org.apache.solr.servlet.CoreContainerProvider;
 import org.apache.solr.update.UpdateShardHandlerConfig;
 import org.apache.solr.util.ModuleUtils;
 import org.slf4j.Logger;
@@ -107,11 +106,7 @@ public class NodeConfig {
 
   private final int indexSearcherExecutorThreads;
 
-  @Deprecated private final int transientCacheSize;
-
   private final boolean useSchemaCache;
-
-  private final String managementPath;
 
   private final PluginInfo[] backupRepositoryPlugins;
 
@@ -147,9 +142,7 @@ public class NodeConfig {
       Integer coreLoadThreads,
       int replayUpdatesThreads,
       int indexSearcherExecutorThreads,
-      int transientCacheSize,
       boolean useSchemaCache,
-      String managementPath,
       Path solrHome,
       SolrResourceLoader loader,
       Properties solrProperties,
@@ -187,15 +180,13 @@ public class NodeConfig {
     this.coreLoadThreads = coreLoadThreads;
     this.replayUpdatesThreads = replayUpdatesThreads;
     this.indexSearcherExecutorThreads = indexSearcherExecutorThreads;
-    this.transientCacheSize = transientCacheSize;
     this.useSchemaCache = useSchemaCache;
-    this.managementPath = managementPath;
     this.solrHome = solrHome;
     this.loader = loader;
     this.solrProperties = solrProperties;
     this.backupRepositoryPlugins = backupRepositoryPlugins;
     this.metricsConfig = metricsConfig;
-    this.cachesConfig = cachesConfig == null ? Collections.emptyMap() : cachesConfig;
+    this.cachesConfig = cachesConfig == null ? Map.of() : cachesConfig;
     this.tracerConfig = tracerConfig;
     this.clusterPlugins = clusterPlugins;
     this.defaultZkHost = defaultZkHost;
@@ -249,10 +240,11 @@ public class NodeConfig {
     //  ZkFailoverTest test case...
     String zkHost = nodeProperties.getProperty(SolrXmlConfig.ZK_HOST);
     if (StrUtils.isNotNullOrEmpty(zkHost)) {
-      int startUpZkTimeOut = 1000 * Integer.getInteger("waitForZk", 0);
-      if (startUpZkTimeOut == 0) {
-        startUpZkTimeOut = SolrZkClientTimeout.DEFAULT_ZK_CLIENT_TIMEOUT;
-      }
+      int startUpZkTimeOut =
+          1000
+              * Integer.getInteger(
+                  "solr.cloud.wait.for.zk.seconds", SolrZkClientTimeout.DEFAULT_ZK_CLIENT_TIMEOUT);
+
       try (SolrZkClient zkClient =
           new SolrZkClient.Builder()
               .withUrl(zkHost)
@@ -260,7 +252,7 @@ public class NodeConfig {
               .withConnTimeOut(startUpZkTimeOut, TimeUnit.MILLISECONDS)
               .withSolrClassLoader(loader)
               .build()) {
-        zkClient.exists("/configs", true);
+        zkClient.exists("/configs");
       } catch (Exception e) {
         throw new SolrException(
             ErrorCode.SERVER_ERROR, "Error occurred while testing zookeeper connection", e);
@@ -302,12 +294,12 @@ public class NodeConfig {
    * @return path to install dir or null if solr.install.dir not set.
    */
   public static Path getSolrInstallDir() {
-    String prop = System.getProperty(SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+    String prop = EnvUtils.getProperty(CoreContainerProvider.SOLR_INSTALL_DIR);
     if (prop == null || prop.isBlank()) {
       log.debug("solr.install.dir property not initialized.");
       return null;
     }
-    return Paths.get(prop);
+    return Path.of(prop);
   }
 
   /**
@@ -383,10 +375,6 @@ public class NodeConfig {
     return useSchemaCache;
   }
 
-  public String getManagementPath() {
-    return managementPath;
-  }
-
   /** Absolute. */
   public Path getConfigSetBaseDirectory() {
     return configSetBaseDirectory;
@@ -398,10 +386,6 @@ public class NodeConfig {
 
   public CloudConfig getCloudConfig() {
     return cloudConfig;
-  }
-
-  public int getTransientCacheSize() {
-    return transientCacheSize;
   }
 
   protected final Path solrHome;
@@ -467,7 +451,7 @@ public class NodeConfig {
     if (solrInstallDir == null) {
       log.warn(
           "Unable to add $SOLR_HOME/lib for shared lib since {} was not set.",
-          SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+          CoreContainerProvider.SOLR_INSTALL_DIR);
     } else {
       // Always add $SOLR_TIP/lib to the shared resource loader
       libDirs.add(solrInstallDir.resolve("lib").toAbsolutePath().normalize().toString());
@@ -495,7 +479,7 @@ public class NodeConfig {
 
   public static final String REDACTED_SYS_PROP_VALUE = "--REDACTED--";
 
-  /** Returns the a system property value, or "--REDACTED--" if the system property is hidden */
+  /** Returns the system property value, or "--REDACTED--" if the system property is hidden */
   public String getRedactedSysPropValue(String sysPropName) {
     return hiddenSysPropPattern.test(sysPropName)
         ? REDACTED_SYS_PROP_VALUE
@@ -540,7 +524,7 @@ public class NodeConfig {
             "Unable to setup modules "
                 + moduleNames
                 + " because "
-                + SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE
+                + CoreContainerProvider.SOLR_INSTALL_DIR
                 + " was not set.");
       }
       return;
@@ -596,7 +580,7 @@ public class NodeConfig {
     private UpdateShardHandlerConfig updateShardHandlerConfig = UpdateShardHandlerConfig.DEFAULT;
     private String configSetServiceClass;
     private String coreAdminHandlerClass = DEFAULT_ADMINHANDLERCLASS;
-    private Map<String, String> coreAdminHandlerActions = Collections.emptyMap();
+    private Map<String, String> coreAdminHandlerActions = Map.of();
     private String collectionsAdminHandlerClass = DEFAULT_COLLECTIONSHANDLERCLASS;
     private String healthCheckHandlerClass = DEFAULT_HEALTHCHECKHANDLERCLASS;
     private String infoHandlerClass = DEFAULT_INFOHANDLERCLASS;
@@ -606,9 +590,7 @@ public class NodeConfig {
     private int coreLoadThreads = DEFAULT_CORE_LOAD_THREADS;
     private int replayUpdatesThreads = Runtime.getRuntime().availableProcessors();
     private int indexSearcherExecutorThreads = DEFAULT_INDEX_SEARCHER_EXECUTOR_THREADS;
-    @Deprecated private int transientCacheSize = -1;
     private boolean useSchemaCache = false;
-    private String managementPath;
     private Properties solrProperties = new Properties();
     private PluginInfo[] backupRepositoryPlugins;
     private MetricsConfig metricsConfig;
@@ -616,9 +598,10 @@ public class NodeConfig {
     private PluginInfo tracerConfig;
     private PluginInfo[] clusterPlugins;
     private String defaultZkHost;
-    private Set<Path> allowPaths = Collections.emptySet();
-    private List<String> allowUrls = Collections.emptyList();
-    private boolean hideStackTrace = Boolean.getBoolean("solr.hideStackTrace");
+    private Set<Path> allowPaths = Set.of();
+    private List<String> allowUrls = List.of();
+    private boolean hideStackTrace =
+        !EnvUtils.getPropertyAsBool("solr.responses.stacktrace.enabled", true);
 
     private final Path solrHome;
     private final String nodeName;
@@ -627,7 +610,7 @@ public class NodeConfig {
     // No:of core load threads in cloud mode is set to a default of 8
     public static final int DEFAULT_CORE_LOAD_THREADS_IN_CLOUD = 8;
 
-    public static final int DEFAULT_INDEX_SEARCHER_EXECUTOR_THREADS = 4;
+    public static final int DEFAULT_INDEX_SEARCHER_EXECUTOR_THREADS = 0;
 
     private static final String DEFAULT_CORESLOCATORCLASS =
         "org.apache.solr.core.CorePropertiesLocator";
@@ -647,7 +630,7 @@ public class NodeConfig {
         Set.of(
             "javax\\.net\\.ssl\\.keyStorePassword",
             "javax\\.net\\.ssl\\.trustStorePassword",
-            "basicauth",
+            ".*credentials",
             "zkDigestPassword",
             "zkDigestReadonlyPassword",
             "aws\\.secretKey", // AWS SDK v1
@@ -661,7 +644,7 @@ public class NodeConfig {
       this.solrHome = solrHome.toAbsolutePath();
       this.coreRootDirectory = solrHome;
       // always init from sysprop because <solrDataHome> config element may be missing
-      setSolrDataHome(System.getProperty(SolrXmlConfig.SOLR_DATA_HOME));
+      setSolrDataHome(EnvUtils.getProperty(SolrXmlConfig.SOLR_DATA_HOME));
       setConfigSetBaseDirectory("configsets");
       this.metricsConfig = new MetricsConfig.MetricsConfigBuilder().build();
     }
@@ -771,21 +754,8 @@ public class NodeConfig {
       return this;
     }
 
-    // Remove in Solr 10.0
-
-    @Deprecated
-    public NodeConfigBuilder setTransientCacheSize(int transientCacheSize) {
-      this.transientCacheSize = transientCacheSize;
-      return this;
-    }
-
     public NodeConfigBuilder setUseSchemaCache(boolean useSchemaCache) {
       this.useSchemaCache = useSchemaCache;
-      return this;
-    }
-
-    public NodeConfigBuilder setManagementPath(String managementPath) {
-      this.managementPath = managementPath;
       return this;
     }
 
@@ -861,28 +831,20 @@ public class NodeConfig {
     }
 
     /**
-     * Finds list of hiddenSysProps requested by system property or environment variable or the
-     * default
+     * Finds list of hiddenSysProps requested in priority of solr.xml, system properties or the
+     * default set
      *
-     * @return set of raw hidden sysProps, may be regex
+     * @return set of raw hidden system properties, may be regex
      */
-    private Set<String> resolveHiddenSysPropsFromSysPropOrEnvOrDefault(String hiddenSysProps) {
-      // Fall back to sysprop and env.var if nothing configured through solr.xml
+    private Set<String> resolveHiddenSysProps(String hiddenSysProps) {
+      // Fall back to system properties if nothing configured through solr.xml
       if (!StrUtils.isNotNullOrEmpty(hiddenSysProps)) {
-        String fromProps = System.getProperty("solr.hiddenSysProps");
-        // Back-compat for solr 9x
-        // DEPRECATED: Remove in 10.0
-        if (StrUtils.isNotNullOrEmpty(fromProps)) {
-          fromProps = System.getProperty("solr.redaction.system.pattern");
-        }
-        String fromEnv = System.getenv("SOLR_HIDDEN_SYS_PROPS");
+        String fromProps = EnvUtils.getProperty("solr.responses.hidden.sys.props");
         if (StrUtils.isNotNullOrEmpty(fromProps)) {
           hiddenSysProps = fromProps;
-        } else if (StrUtils.isNotNullOrEmpty(fromEnv)) {
-          hiddenSysProps = fromEnv;
         }
       }
-      Set<String> hiddenSysPropSet = Collections.emptySet();
+      Set<String> hiddenSysPropSet = Set.of();
       if (hiddenSysProps != null) {
         hiddenSysPropSet =
             StrUtils.splitSmart(hiddenSysProps, ',').stream()
@@ -921,9 +883,7 @@ public class NodeConfig {
           coreLoadThreads,
           replayUpdatesThreads,
           indexSearcherExecutorThreads,
-          transientCacheSize,
           useSchemaCache,
-          managementPath,
           solrHome,
           loader,
           solrProperties,
@@ -938,7 +898,7 @@ public class NodeConfig {
           hideStackTrace,
           configSetServiceClass,
           modules,
-          resolveHiddenSysPropsFromSysPropOrEnvOrDefault(hiddenSysProps));
+          resolveHiddenSysProps(hiddenSysProps));
     }
 
     public NodeConfigBuilder setSolrResourceLoader(SolrResourceLoader resourceLoader) {
