@@ -27,34 +27,32 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import javax.management.MBeanServer;
-import org.apache.solr.client.solrj.impl.HttpClientUtil;
+import org.apache.solr.client.solrj.impl.SolrHttpConstants;
 import org.apache.solr.cloud.ClusterSingleton;
 import org.apache.solr.cluster.placement.PlacementPluginFactory;
 import org.apache.solr.common.ConfigNode;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.DOMUtil;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.logging.LogWatcherConfig;
-import org.apache.solr.metrics.reporters.SolrJmxReporter;
 import org.apache.solr.search.CacheConfig;
-import org.apache.solr.servlet.SolrDispatchFilter;
+import org.apache.solr.servlet.CoreContainerProvider;
 import org.apache.solr.update.UpdateShardHandlerConfig;
 import org.apache.solr.util.DOMConfigNode;
 import org.apache.solr.util.DataConfigNode;
-import org.apache.solr.util.JmxUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xml.sax.InputSource;
@@ -79,9 +77,8 @@ public class SolrXmlConfig {
    * wrapping the original Properties, with the 'zkHost' value set based on the value of the
    * corresponding System property (if set)
    *
-   * <p>In theory we only need this logic once, ideally in SolrDispatchFilter, but we put it here to
-   * re-use redundantly because of how much surface area our API has for various tests to poke at
-   * us.
+   * <p>In theory we only need this logic once, ideally in SolrServlet, but we put it here to re-use
+   * redundantly because of how much surface area our API has for various tests to poke at us.
    */
   public static Properties wrapAndSetZkHostFromSysPropIfNeeded(final Properties props) {
     if (null != props && StrUtils.isNotNullOrEmpty(props.getProperty(ZK_HOST))) {
@@ -90,7 +87,7 @@ public class SolrXmlConfig {
     }
     // we always wrap if we might set a property -- never mutate the original props
     final Properties results = (null == props ? new Properties() : new Properties(props));
-    final String sysprop = System.getProperty(ZK_HOST);
+    final String sysprop = EnvUtils.getProperty(ZK_HOST);
     if (StrUtils.isNotNullOrEmpty(sysprop)) {
       results.setProperty(ZK_HOST, sysprop);
     }
@@ -106,8 +103,8 @@ public class SolrXmlConfig {
     // *directly* check the system
     // property if it's not specified.
     //
-    // (checking the sys prop here is really just for tests that by-pass SolrDispatchFilter. In
-    // non-test situations, SolrDispatchFilter will check the system property if needed in order to
+    // (checking the sys prop here is really just for tests that by-pass SolrServlet. In
+    // non-test situations, SolrServlet will check the system property if needed in order to
     // try and load solr.xml from ZK, and should have put the sys prop value in the node properties
     // for us)
     final String defaultZkHost =
@@ -131,10 +128,10 @@ public class SolrXmlConfig {
     // since it is arranged as a separate section it is placed here
     Map<String, String> coreAdminHandlerActions =
         readNodeListAsNamedList(root.get("coreAdminHandlerActions"), "<coreAdminHandlerActions>")
-            .asMap()
+            .asShallowMap()
             .entrySet()
             .stream()
-            .collect(Collectors.toMap(item -> item.getKey(), item -> item.getValue().toString()));
+            .collect(Collectors.toMap(Entry::getKey, item -> item.getValue().toString()));
 
     UpdateShardHandlerConfig updateConfig;
     if (deprecatedUpdateConfig == null) {
@@ -167,10 +164,6 @@ public class SolrXmlConfig {
     configBuilder.setBackupRepositoryPlugins(
         getBackupRepositoryPluginInfos(root.get("backup").getAll("repository")));
     configBuilder.setClusterPlugins(getClusterPlugins(loader, root));
-    // <metrics><hiddenSysProps></metrics> will be removed in Solr 10, but until then, use it if a
-    // <hiddenSysProps> is not provided under <solr>.
-    // Remove this line in 10.0
-    configBuilder.setHiddenSysProps(getHiddenSysProps(root.get("metrics")));
     configBuilder.setMetricsConfig(getMetricsConfig(root.get("metrics")));
     configBuilder.setCachesConfig(getCachesConfig(loader, root.get("caches")));
     configBuilder.setDefaultZkHost(defaultZkHost);
@@ -186,12 +179,12 @@ public class SolrXmlConfig {
             "solr.xml does not exist in " + configFile.getParent() + " cannot start Solr");
       }
       log.info("solr.xml not found in SOLR_HOME, using built-in default");
-      String solrInstallDir = System.getProperty(SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+      String solrInstallDir = EnvUtils.getProperty(CoreContainerProvider.SOLR_INSTALL_DIR);
       if (solrInstallDir == null) {
         throw new SolrException(
             SolrException.ErrorCode.SERVER_ERROR,
             "Could not find default solr.xml file due to missing "
-                + SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+                + CoreContainerProvider.SOLR_INSTALL_DIR);
       }
       configFile = Path.of(solrInstallDir).resolve("server").resolve("solr").resolve("solr.xml");
     }
@@ -288,7 +281,7 @@ public class SolrXmlConfig {
   }
 
   private static NamedList<Object> readNodeListAsNamedList(ConfigNode cfg, String section) {
-    NamedList<Object> nl = DOMUtil.readNamedListChildren(cfg);
+    NamedList<Object> nl = cfg.childNodesToNamedList();
     Set<String> keys = new HashSet<>();
     for (Map.Entry<String, Object> entry : nl) {
       if (!keys.add(entry.getKey()))
@@ -350,9 +343,6 @@ public class SolrXmlConfig {
               case "maxBooleanClauses":
                 builder.setBooleanQueryMaxClauseCount(it.intVal(-1));
                 break;
-              case "managementPath":
-                builder.setManagementPath(it.txt());
-                break;
               case "sharedLib":
                 builder.setSharedLibDirectory(it.txt());
                 break;
@@ -383,10 +373,6 @@ public class SolrXmlConfig {
               case "indexSearcherExecutorThreads":
                 builder.setIndexSearcherExecutorThreads(it.intVal(-1));
                 break;
-              case "transientCacheSize":
-                log.warn("solr.xml transientCacheSize -- transient cores is deprecated");
-                builder.setTransientCacheSize(it.intVal(-1));
-                break;
               case "allowUrls":
                 builder.setAllowUrls(separateStrings(it.txt()));
                 break;
@@ -407,14 +393,14 @@ public class SolrXmlConfig {
 
   private static List<String> separateStrings(String commaSeparatedString) {
     if (StrUtils.isNullOrEmpty(commaSeparatedString)) {
-      return Collections.emptyList();
+      return List.of();
     }
     return Arrays.asList(COMMA_SEPARATED_PATTERN.split(commaSeparatedString));
   }
 
   private static Set<Path> separatePaths(String commaSeparatedString) {
     if (StrUtils.isNullOrEmpty(commaSeparatedString)) {
-      return Collections.emptySet();
+      return Set.of();
     }
     // Parse the list of paths. The special values '*' and '_ALL_' mean all paths.
     String[] pathStrings = COMMA_SEPARATED_PATTERN.split(commaSeparatedString);
@@ -434,10 +420,10 @@ public class SolrXmlConfig {
 
     boolean defined = false;
 
-    int maxUpdateConnections = HttpClientUtil.DEFAULT_MAXCONNECTIONS;
-    int maxUpdateConnectionsPerHost = HttpClientUtil.DEFAULT_MAXCONNECTIONSPERHOST;
-    int distributedSocketTimeout = HttpClientUtil.DEFAULT_SO_TIMEOUT;
-    int distributedConnectionTimeout = HttpClientUtil.DEFAULT_CONNECT_TIMEOUT;
+    int maxUpdateConnections = SolrHttpConstants.DEFAULT_MAXCONNECTIONS;
+    int maxUpdateConnectionsPerHost = SolrHttpConstants.DEFAULT_MAXCONNECTIONSPERHOST;
+    int distributedSocketTimeout = SolrHttpConstants.DEFAULT_SO_TIMEOUT;
+    int distributedConnectionTimeout = SolrHttpConstants.DEFAULT_CONNECT_TIMEOUT;
     String metricNameStrategy = UpdateShardHandlerConfig.DEFAULT_METRICNAMESTRATEGY;
     int maxRecoveryThreads = UpdateShardHandlerConfig.DEFAULT_MAXRECOVERYTHREADS;
 
@@ -506,17 +492,10 @@ public class SolrXmlConfig {
     int hostPort =
         parseInt("hostPort", required("solrcloud", "hostPort", removeValue(nl, "hostPort")));
     if (hostPort <= 0) {
-      // Default to the port that jetty is listening on, or 8983 if that is not provided.
-      hostPort = parseInt("jetty.port", System.getProperty("jetty.port", "8983"));
+      // Default to the port that Solr is listening on, or 8983 if that is not provided.
+      hostPort = EnvUtils.getPropertyAsInteger("solr.port.listen", 8983);
     }
     String hostName = required("solrcloud", "host", removeValue(nl, "host"));
-
-    // We no longer require or support the hostContext property, but legacy users may have it, so
-    // remove it from the list.
-    String hostContext = removeValue(nl, "hostContext");
-    if (hostContext != null) {
-      log.warn("solr.xml hostContext -- hostContext is deprecated and ignored.");
-    }
 
     CloudConfig.CloudConfigBuilder builder = new CloudConfig.CloudConfigBuilder(hostName, hostPort);
     // set the defaultZkHost until/unless it's overridden in the "cloud section" (below)...
@@ -539,9 +518,6 @@ public class SolrXmlConfig {
         case "zkHost":
           builder.setZkHost(value);
           break;
-        case "genericCoreNodeNames":
-          builder.setUseGenericCoreNames(Boolean.parseBoolean(value));
-          break;
         case "zkACLProvider":
           builder.setZkACLProviderClass(value);
           break;
@@ -563,18 +539,13 @@ public class SolrXmlConfig {
         case "pkiHandlerPublicKeyPath":
           builder.setPkiHandlerPublicKeyPath(value);
           break;
-        case "distributedClusterStateUpdates":
-          builder.setUseDistributedClusterStateUpdates(Boolean.parseBoolean(value));
-          break;
-        case "distributedCollectionConfigSetExecution":
-          builder.setUseDistributedCollectionConfigSetExecution(Boolean.parseBoolean(value));
-          break;
         case "minStateByteLenForCompression":
           builder.setMinStateByteLenForCompression(parseInt(name, value));
           break;
         case "stateCompressor":
           builder.setStateCompressorClass(value);
           break;
+
         default:
           throw new SolrException(
               SolrException.ErrorCode.SERVER_ERROR,
@@ -723,7 +694,7 @@ public class SolrXmlConfig {
     builder.setHistogramSupplier(getPluginInfo(metrics.get("suppliers").get("histogram")));
 
     if (metrics.get("missingValues").exists()) {
-      NamedList<Object> missingValues = DOMUtil.childNodesToNamedList(metrics.get("missingValues"));
+      NamedList<Object> missingValues = metrics.get("missingValues").childNodesToNamedList();
       builder.setNullNumber(decodeNullValue(missingValues.get("nullNumber")));
       builder.setNotANumber(decodeNullValue(missingValues.get("notANumber")));
       builder.setNullString(decodeNullValue(missingValues.get("nullString")));
@@ -733,7 +704,7 @@ public class SolrXmlConfig {
     ConfigNode caching = metrics.get("solr/metrics/caching");
     if (caching != null) {
       Object threadsCachingIntervalSeconds =
-          DOMUtil.childNodesToNamedList(caching).get("threadsIntervalSeconds", null);
+          caching.childNodesToNamedList().get("threadsIntervalSeconds");
       builder.setCacheConfig(
           new MetricsConfig.CacheConfig(
               threadsCachingIntervalSeconds == null
@@ -741,8 +712,7 @@ public class SolrXmlConfig {
                   : Integer.parseInt(threadsCachingIntervalSeconds.toString())));
     }
 
-    PluginInfo[] reporterPlugins = getMetricReporterPluginInfos(metrics);
-    return builder.setMetricReporterPlugins(reporterPlugins).build();
+    return builder.build();
   }
 
   private static Map<String, CacheConfig> getCachesConfig(
@@ -760,8 +730,7 @@ public class SolrXmlConfig {
   }
 
   private static Object decodeNullValue(Object o) {
-    if (o instanceof String) { // check if it's a JSON object
-      String str = (String) o;
+    if (o instanceof String str) { // check if it's a JSON object
       if (!str.isBlank() && (str.startsWith("{") || str.startsWith("["))) {
         try {
           o = Utils.fromJSONString((String) o);
@@ -771,56 +740,6 @@ public class SolrXmlConfig {
       }
     }
     return o;
-  }
-
-  private static PluginInfo[] getMetricReporterPluginInfos(ConfigNode metrics) {
-    List<PluginInfo> configs = new ArrayList<>();
-    boolean hasJmxReporter = false;
-    for (ConfigNode node : metrics.getAll("reporter")) {
-      PluginInfo info = getPluginInfo(node);
-      if (info == null) {
-        continue;
-      }
-      String clazz = info.className;
-      if (clazz != null && clazz.equals(SolrJmxReporter.class.getName())) {
-        hasJmxReporter = true;
-      }
-      configs.add(info);
-    }
-
-    // if there's an MBean server running but there was no JMX reporter then add a default one
-    MBeanServer mBeanServer = JmxUtil.findFirstMBeanServer();
-    if (mBeanServer != null && !hasJmxReporter) {
-      log.debug(
-          "MBean server found: {}, but no JMX reporters were configured - adding default JMX reporter.",
-          mBeanServer);
-      Map<String, Object> attributes = new HashMap<>();
-      attributes.put("name", "default");
-      attributes.put("class", SolrJmxReporter.class.getName());
-      PluginInfo defaultPlugin = new PluginInfo("reporter", attributes);
-      configs.add(defaultPlugin);
-    }
-    return configs.toArray(new PluginInfo[0]);
-  }
-
-  /**
-   * Deprecated as of 9.3, will be removed in 10.0
-   *
-   * @param metrics configNode for the metrics
-   * @return a comma-separated list of hidden Sys Props
-   */
-  @Deprecated(forRemoval = true, since = "9.3")
-  private static String getHiddenSysProps(ConfigNode metrics) {
-    ConfigNode p = metrics.get("hiddenSysProps");
-    if (!p.exists()) return null;
-    Set<String> props = new HashSet<>();
-    p.forEachChild(
-        it -> {
-          if (it.name().equals("str") && StrUtils.isNotNullOrEmpty(it.txt()))
-            props.add(Pattern.quote(it.txt()));
-          return Boolean.TRUE;
-        });
-    return String.join(",", props);
   }
 
   private static PluginInfo getPluginInfo(ConfigNode cfg) {
