@@ -21,7 +21,7 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.net.URI;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.text.SimpleDateFormat;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -45,7 +45,6 @@ import org.apache.solr.core.IndexDeletionPolicyWrapper;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.core.backup.repository.BackupRepository;
 import org.apache.solr.core.backup.repository.BackupRepository.PathType;
-import org.apache.solr.core.backup.repository.LocalFileSystemRepository;
 import org.apache.solr.core.snapshots.SolrSnapshotMetaDataManager;
 import org.apache.solr.handler.api.V2ApiUtils;
 import org.slf4j.Logger;
@@ -67,22 +66,6 @@ public class SnapShooter {
   private BackupRepository backupRepo = null;
   private String commitName; // can be null
 
-  @Deprecated
-  public SnapShooter(SolrCore core, String location, String snapshotName) {
-    String snapDirStr = null;
-    // Note - This logic is only applicable to the usecase where a shared file-system is exposed via
-    // local file-system interface (primarily for backwards compatibility). For other use-cases,
-    // users will be required to specify "location" where the backup should be stored.
-    if (location == null) {
-      snapDirStr = core.getDataDir();
-    } else {
-      snapDirStr =
-          core.getCoreDescriptor().getInstanceDir().resolve(location).normalize().toString();
-    }
-    initialize(
-        new LocalFileSystemRepository(), core, Paths.get(snapDirStr).toUri(), snapshotName, null);
-  }
-
   public SnapShooter(
       BackupRepository backupRepo,
       SolrCore core,
@@ -103,7 +86,7 @@ public class SnapShooter {
     this.baseSnapDirPath = location;
     this.snapshotName = snapshotName;
     if ("file".equals(location.getScheme())) {
-      solrCore.getCoreContainer().assertPathAllowed(Paths.get(location));
+      solrCore.getCoreContainer().assertPathAllowed(Path.of(location));
     }
     if (snapshotName != null) {
       directoryName = "snapshot." + snapshotName;
@@ -245,8 +228,7 @@ public class SnapShooter {
             + solrCore.getName());
   }
 
-  public void createSnapAsync(final int numberToKeep, Consumer<NamedList<?>> result)
-      throws IOException {
+  public void createSnapAsync(final int numberToKeep, Consumer<NamedList<?>> result) {
     // TODO should use Solr's ExecutorUtil
     new Thread(
             () -> {
