@@ -23,7 +23,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
@@ -34,6 +33,7 @@ import org.apache.lucene.index.Fields;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.index.PostingsEnum;
 import org.apache.lucene.index.Term;
+import org.apache.lucene.index.TermVectors;
 import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.util.BytesRef;
@@ -112,7 +112,7 @@ public class TermVectorComponent extends SearchComponent {
           ? fieldNames
           :
           // return empty set indicating no fields should be used
-          Collections.emptySet();
+          Set.of();
     }
 
     // otherwise us the raw fldList as is, no special parsing or globs
@@ -251,6 +251,7 @@ public class TermVectorComponent extends SearchComponent {
     SolrIndexSearcher searcher = rb.req.getSearcher();
 
     IndexReader reader = searcher.getIndexReader();
+    TermVectors termVectors = reader.termVectors();
     // the TVMapper is a TermVectorMapper which can be used to optimize loading of Term Vectors
 
     // Only load the id field to get the uniqueKey of that
@@ -277,7 +278,7 @@ public class TermVectorComponent extends SearchComponent {
       if (null != fields) {
         for (Map.Entry<String, FieldOptions> entry : fieldOptions.entrySet()) {
           final String field = entry.getKey();
-          final Terms vector = reader.getTermVector(docId, field);
+          final Terms vector = termVectors.get(docId, field);
           if (vector != null) {
             TermsEnum termsEnum = vector.iterator();
             mapOneVector(docNL, entry.getValue(), reader, docId, termsEnum, field);
@@ -285,7 +286,7 @@ public class TermVectorComponent extends SearchComponent {
         }
       } else {
         // extract all fields
-        final Fields vectors = reader.getTermVectors(docId);
+        final Fields vectors = termVectors.get(docId);
         // There can be no documents with vectors
         if (vectors != null) {
           for (String field : vectors) {
@@ -414,7 +415,7 @@ public class TermVectorComponent extends SearchComponent {
 
   @Override
   public void finishStage(ResponseBuilder rb) {
-    if (rb.stage == ResponseBuilder.STAGE_GET_FIELDS) {
+    if (rb.getStage() == ResponseBuilder.STAGE_GET_FIELDS) {
 
       NamedList<Object> termVectorsNL = new NamedList<>();
 
