@@ -21,18 +21,16 @@ import static org.apache.solr.common.params.CommonParams.JSON_MIME;
 import static org.apache.solr.handler.loader.CSVLoaderBase.SEPARATOR;
 
 import java.io.BufferedReader;
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.Reader;
 import java.io.StringReader;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 import javax.xml.stream.XMLInputFactory;
 import javax.xml.stream.XMLStreamConstants;
@@ -45,6 +43,7 @@ import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ContentStream;
 import org.apache.solr.common.util.ContentStreamBase;
+import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.handler.loader.CSVLoaderBase;
 import org.apache.solr.handler.loader.JsonLoader;
 import org.apache.solr.handler.loader.XMLLoader;
@@ -65,14 +64,11 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
   private static final int MAX_STREAM_SIZE = (5 * 1024 * 1024);
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  public static byte[] streamAsBytes(final InputStream in) throws IOException {
-    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-    byte[] buf = new byte[1024];
-    int r;
-    try (in) {
-      while ((r = in.read(buf)) != -1) baos.write(buf, 0, r);
+  /** Reads all bytes from the stream. */
+  private static byte[] readAllBytes(ContentStream cs) throws IOException {
+    try (var is = cs.getStream()) {
+      return is.readAllBytes();
     }
-    return baos.toByteArray();
   }
 
   @Override
@@ -81,10 +77,6 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
     final String contentType = stream.getContentType();
     if (contentType == null) {
       return SampleDocuments.NONE;
-    }
-
-    if (params == null) {
-      params = new ModifiableSolrParams();
     }
 
     Long streamSize = stream.getSize();
@@ -101,7 +93,7 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
       fileSource = stream.getSourceInfo() != null ? stream.getSourceInfo() : "file";
     }
 
-    byte[] uploadedBytes = streamAsBytes(stream.getStream());
+    byte[] uploadedBytes = readAllBytes(stream);
     // recheck the upload size in case the stream returned null for getSize
     if (uploadedBytes.length > MAX_STREAM_SIZE) {
       throw new SolrException(
@@ -122,14 +114,14 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
     List<SolrInputDocument> docs = null;
     if (stream.getSize() > 0) {
       if (contentType.contains(JSON_MIME)) {
-        docs = loadJsonDocs(params, byteStream, maxDocsToLoad);
+        docs = loadJsonDocs(byteStream, maxDocsToLoad);
       } else if (contentType.contains("text/xml") || contentType.contains("application/xml")) {
-        docs = loadXmlDocs(params, byteStream, maxDocsToLoad);
+        docs = loadXmlDocs(byteStream, maxDocsToLoad);
       } else if (contentType.contains("text/csv") || contentType.contains("application/csv")) {
         docs = loadCsvDocs(params, fileSource, uploadedBytes, charset, maxDocsToLoad);
       } else if (contentType.contains("text/plain")
           || contentType.contains("application/octet-stream")) {
-        docs = loadJsonLines(params, byteStream, maxDocsToLoad);
+        docs = loadJsonLines(byteStream, maxDocsToLoad);
       } else {
         throw new SolrException(
             SolrException.ErrorCode.BAD_REQUEST, contentType + " not supported yet!");
@@ -148,7 +140,7 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
       throws IOException {
     ContentStream stream;
     if (params.get(SEPARATOR) == null) {
-      String csvStr = new String(streamBytes, charset);
+      String csvStr = new String(streamBytes, IOUtils.charsetForName(charset));
       char sep = detectTSV(csvStr);
       ModifiableSolrParams modifiableSolrParams = new ModifiableSolrParams(params);
       modifiableSolrParams.set(SEPARATOR, String.valueOf(sep));
@@ -157,13 +149,13 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
     } else {
       stream = new ContentStreamBase.ByteArrayStream(streamBytes, source, "text/csv");
     }
-    return (new SampleCSVLoader(new CSVRequest(params), maxDocsToLoad)).loadDocs(stream);
+    return (new SampleCSVLoader(new SolrQueryRequestBase(null, params), maxDocsToLoad))
+        .loadDocs(stream);
   }
 
   @SuppressWarnings("unchecked")
   protected List<SolrInputDocument> loadJsonLines(
-      SolrParams params, ContentStreamBase.ByteArrayStream stream, final int maxDocsToLoad)
-      throws IOException {
+      ContentStreamBase.ByteArrayStream stream, final int maxDocsToLoad) throws IOException {
     List<Map<String, Object>> docs = new ArrayList<>();
     try (Reader r = stream.getReader()) {
       BufferedReader br = new BufferedReader(r);
@@ -187,8 +179,7 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
 
   @SuppressWarnings("unchecked")
   protected List<SolrInputDocument> loadJsonDocs(
-      SolrParams params, ContentStreamBase.ByteArrayStream stream, final int maxDocsToLoad)
-      throws IOException {
+      ContentStreamBase.ByteArrayStream stream, final int maxDocsToLoad) throws IOException {
     Object json;
     try (Reader r = stream.getReader()) {
       json = ObjectBuilder.getVal(new JSONParser(r));
@@ -208,8 +199,8 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
       String charset = ContentStreamBase.getCharsetFromContentType(stream.getContentType());
       String jsonStr =
           new String(
-              streamAsBytes(stream.getStream()),
-              charset != null ? charset : ContentStreamBase.DEFAULT_CHARSET);
+              readAllBytes(stream),
+              charset != null ? IOUtils.charsetForName(charset) : StandardCharsets.UTF_8);
       String[] lines = jsonStr.split("\n");
       if (lines.length > 1) {
         for (String line : lines) {
@@ -223,7 +214,7 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
       if (isJsonLines) {
         docs = loadJsonLines(lines);
       } else {
-        docs = Collections.singletonList((Map<String, Object>) json);
+        docs = List.of((Map<String, Object>) json);
       }
     } else {
       throw new SolrException(
@@ -237,9 +228,8 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
   }
 
   protected List<SolrInputDocument> loadXmlDocs(
-      SolrParams params, ContentStreamBase.ByteArrayStream stream, final int maxDocsToLoad)
-      throws IOException {
-    String xmlString = readInputAsString(stream.getStream()).trim();
+      ContentStreamBase.ByteArrayStream stream, final int maxDocsToLoad) throws IOException {
+    String xmlString = new String(readAllBytes(stream), StandardCharsets.UTF_8).trim();
     List<SolrInputDocument> docs;
     if (xmlString.contains("<add>") && xmlString.contains("<doc>")) {
       XMLInputFactory inputFactory = XMLInputFactory.newInstance();
@@ -282,7 +272,7 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
       final int event;
       try {
         event = parser.next();
-      } catch (java.util.NoSuchElementException noSuchElementException) {
+      } catch (NoSuchElementException noSuchElementException) {
         return docs;
       }
       switch (event) {
@@ -320,10 +310,6 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
     return docs;
   }
 
-  protected String readInputAsString(InputStream in) throws IOException {
-    return new String(streamAsBytes(in), StandardCharsets.UTF_8);
-  }
-
   protected char detectTSV(String csvStr) {
     char sep = ',';
     int endOfFirstLine = csvStr.indexOf('\n');
@@ -350,19 +336,13 @@ public class DefaultSampleDocumentsLoader implements SampleDocumentsLoader {
     }
   }
 
-  private static class CSVRequest extends SolrQueryRequestBase {
-    CSVRequest(SolrParams params) {
-      super(null, params);
-    }
-  }
-
   private static class SampleCSVLoader extends CSVLoaderBase {
     List<SolrInputDocument> docs = new ArrayList<>();
-    CSVRequest req;
+    SolrQueryRequestBase req;
     int maxDocsToLoad;
     String multiValueDelimiter;
 
-    SampleCSVLoader(CSVRequest req, int maxDocsToLoad) {
+    SampleCSVLoader(SolrQueryRequestBase req, int maxDocsToLoad) {
       super(req, new NoOpUpdateRequestProcessor());
       this.req = req;
       this.maxDocsToLoad = maxDocsToLoad;
