@@ -22,7 +22,6 @@ import static org.apache.solr.client.solrj.SolrRequest.METHOD.POST;
 import static org.apache.solr.client.solrj.SolrRequest.METHOD.PUT;
 import static org.apache.solr.common.params.CommonParams.JSON_MIME;
 import static org.apache.solr.handler.admin.ConfigSetsHandler.DEFAULT_CONFIGSET_NAME;
-import static org.apache.solr.schema.ManagedIndexSchemaFactory.DEFAULT_MANAGED_SCHEMA_RESOURCE_NAME;
 import static org.apache.solr.security.PermissionNameProvider.Name.CONFIG_EDIT_PERM;
 import static org.apache.solr.security.PermissionNameProvider.Name.CONFIG_READ_PERM;
 
@@ -34,6 +33,7 @@ import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -50,10 +50,10 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import org.apache.solr.api.EndPoint;
-import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.cloud.ZkConfigSetService;
 import org.apache.solr.cloud.ZkSolrResourceLoader;
@@ -61,6 +61,7 @@ import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.SolrInputField;
 import org.apache.solr.common.cloud.DocCollection;
+import org.apache.solr.common.cloud.Slice;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.common.cloud.ZkStateReader;
@@ -72,7 +73,6 @@ import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.SolrConfig;
 import org.apache.solr.core.SolrResourceLoader;
-import org.apache.solr.handler.configsets.ConfigSetAPIBase;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.RawResponseWriter;
 import org.apache.solr.response.SolrQueryResponse;
@@ -85,11 +85,10 @@ import org.noggit.ObjectBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/** All V2 APIs that have a prefix of /api/schema-designer/ */
+/** All V2 APIs have a prefix of /api/schema-designer/ */
 public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
-  private static final Set<String> excludeConfigSetNames =
-      new HashSet<>(Arrays.asList(DEFAULT_CONFIGSET_NAME, BLOB_STORE_ID));
+  private static final Set<String> excludeConfigSetNames = Set.of(DEFAULT_CONFIGSET_NAME);
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
@@ -103,8 +102,8 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
   public SchemaDesignerAPI(CoreContainer coreContainer) {
     this(
         coreContainer,
-        SchemaDesignerAPI.newSchemaSuggester(coreContainer),
-        SchemaDesignerAPI.newSampleDocumentsLoader(coreContainer));
+        SchemaDesignerAPI.newSchemaSuggester(),
+        SchemaDesignerAPI.newSampleDocumentsLoader());
   }
 
   SchemaDesignerAPI(
@@ -119,13 +118,13 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     this.settingsDAO = new SchemaDesignerSettingsDAO(coreContainer, configSetHelper);
   }
 
-  public static SchemaSuggester newSchemaSuggester(CoreContainer coreContainer) {
+  public static SchemaSuggester newSchemaSuggester() {
     DefaultSchemaSuggester suggester = new DefaultSchemaSuggester();
     suggester.init(new NamedList<>());
     return suggester;
   }
 
-  public static SampleDocumentsLoader newSampleDocumentsLoader(CoreContainer coreContainer) {
+  public static SampleDocumentsLoader newSampleDocumentsLoader() {
     SampleDocumentsLoader loader = new DefaultSampleDocumentsLoader();
     loader.init(new NamedList<>());
     return loader;
@@ -169,12 +168,11 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
     responseMap.put(SCHEMA_VERSION_PARAM, configSetHelper.getCurrentSchemaVersion(mutableId));
     responseMap.put(
-        "collections",
-        exists ? configSetHelper.listCollectionsForConfig(configSet) : Collections.emptyList());
+        "collections", exists ? configSetHelper.listCollectionsForConfig(configSet) : List.of());
 
     // don't fail if loading sample docs fails
     try {
-      responseMap.put("numDocs", configSetHelper.getStoredSampleDocs(configSet).size());
+      responseMap.put("numDocs", configSetHelper.retrieveSampleDocs(configSet).size());
     } catch (Exception exc) {
       log.warn("Failed to load sample docs from blob store for {}", configSet, exc);
     }
@@ -218,13 +216,13 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     String filePath = getConfigSetZkPath(getMutableId(configSet), file);
     byte[] data;
     try {
-      data = zkStateReader().getZkClient().getData(filePath, null, null, true);
+      data = zkStateReader().getZkClient().getData(filePath, null, null);
     } catch (KeeperException | InterruptedException e) {
       throw new IOException("Error reading file: " + filePath, SolrZkClient.checkInterrupted(e));
     }
     String stringData =
         data != null && data.length > 0 ? new String(data, StandardCharsets.UTF_8) : "";
-    rsp.getValues().addAll(Collections.singletonMap(file, stringData));
+    rsp.getValues().addAll(Map.of(file, stringData));
   }
 
   @EndPoint(method = POST, path = "/schema-designer/file", permission = CONFIG_EDIT_PERM)
@@ -241,19 +239,19 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
           "File '" + file + "' not found in configSet: " + configSet);
     }
 
-    byte[] data =
-        DefaultSampleDocumentsLoader.streamAsBytes(
-            extractSingleContentStream(req, true).getStream());
+    byte[] data;
+    try (InputStream in = extractSingleContentStream(req, true).getStream()) {
+      data = in.readAllBytes();
+    }
     Exception updateFileError = null;
-    boolean requestIsTrusted =
-        ConfigSetAPIBase.isTrusted(req.getUserPrincipal(), coreContainer.getAuthenticationPlugin());
+
     if (SOLR_CONFIG_XML.equals(file)) {
       // verify the updated solrconfig.xml is valid before saving to ZK (to avoid things blowing up
       // later)
       try {
         InMemoryResourceLoader loader =
             new InMemoryResourceLoader(coreContainer, mutableId, SOLR_CONFIG_XML, data);
-        SolrConfig.readFromResourceLoader(loader, SOLR_CONFIG_XML, requestIsTrusted, null);
+        SolrConfig.readFromResourceLoader(loader, SOLR_CONFIG_XML, null);
       } catch (Exception exc) {
         updateFileError = exc;
       }
@@ -273,15 +271,10 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     // apply the update and reload the temp collection / re-index sample docs
     SolrZkClient zkClient = zkStateReader().getZkClient();
     try {
-      zkClient.setData(zkPath, data, true);
+      zkClient.setData(zkPath, data);
     } catch (KeeperException | InterruptedException e) {
       throw new IOException(
           "Failed to save data in ZK at path: " + zkPath, SolrZkClient.checkInterrupted(e));
-    }
-    // If the request is untrusted, and the configSet is trusted, remove the trusted flag on the
-    // configSet.
-    if (configSetHelper.isConfigSetTrusted(mutableId) && !requestIsTrusted) {
-      configSetHelper.removeConfigSetTrust(mutableId);
     }
 
     configSetHelper.reloadTempCollection(mutableId, false);
@@ -289,7 +282,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     ManagedIndexSchema schema = loadLatestSchema(mutableId);
     Map<Object, Throwable> errorsDuringIndexing = null;
     SolrException solrExc = null;
-    List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+    List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
     String[] analysisErrorHolder = new String[1];
     if (!docs.isEmpty()) {
       String idField = schema.getUniqueKeyField().getName();
@@ -325,7 +318,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     final String idField = getRequiredParam(UNIQUE_KEY_FIELD_PARAM, req);
     String docId = req.getParams().get(DOC_ID_PARAM);
 
-    final List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+    final List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
     String textValue = null;
     if (StrUtils.isNullOrEmpty(docId)) {
       // no doc ID from client ... find the first doc with a non-empty string value for fieldName
@@ -353,7 +346,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     }
 
     if (textValue != null) {
-      Map<String, Object> analysis = configSetHelper.analyzeField(configSet, fieldName, textValue);
+      var analysis = configSetHelper.analyzeField(configSet, fieldName, textValue);
       rsp.getValues().addAll(Map.of(idField, docId, fieldName, textValue, "analysis", analysis));
     }
   }
@@ -365,16 +358,14 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
   public void listCollectionsForConfig(SolrQueryRequest req, SolrQueryResponse rsp) {
     final String configSet = getRequiredParam(CONFIG_SET_PARAM, req);
     rsp.getValues()
-        .addAll(
-            Collections.singletonMap(
-                "collections", configSetHelper.listCollectionsForConfig(configSet)));
+        .addAll(Map.of("collections", configSetHelper.listCollectionsForConfig(configSet)));
   }
 
   // CONFIG_EDIT_PERM is required here since this endpoint is used by the UI to determine if the
   // user has access to the Schema Designer UI
   @EndPoint(method = GET, path = "/schema-designer/configs", permission = CONFIG_EDIT_PERM)
   public void listConfigs(SolrQueryRequest req, SolrQueryResponse rsp) throws IOException {
-    rsp.getValues().addAll(Collections.singletonMap("configSets", listEnabledConfigs()));
+    rsp.getValues().addAll(Map.of("configSets", listEnabledConfigs()));
   }
 
   protected Map<String, Integer> listEnabledConfigs() throws IOException {
@@ -402,8 +393,8 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     SolrZkClient zkClient = zkStateReader().getZkClient();
     String configId = mutableId;
     try {
-      if (!zkClient.exists(getConfigSetZkPath(mutableId, null), true)) {
-        if (zkClient.exists(getConfigSetZkPath(configSet, null), true)) {
+      if (!zkClient.exists(getConfigSetZkPath(mutableId, null))) {
+        if (zkClient.exists(getConfigSetZkPath(configSet, null))) {
           configId = configSet;
         } else {
           throw new SolrException(
@@ -436,7 +427,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
     ManagedIndexSchema schema = loadLatestSchema(mutableId);
     Map<String, Object> response =
-        buildResponse(configSet, schema, null, configSetHelper.getStoredSampleDocs(configSet));
+        buildResponse(configSet, schema, null, configSetHelper.retrieveSampleDocs(configSet));
     response.put(action, objectName);
     rsp.getValues().addAll(response);
   }
@@ -475,7 +466,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
     // re-index the docs if no error to this point
     final ManagedIndexSchema schema = loadLatestSchema(mutableId);
-    List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+    List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
     Map<Object, Throwable> errorsDuringIndexing = null;
     String[] analysisErrorHolder = new String[1];
     if (solrExc == null && !docs.isEmpty()) {
@@ -519,7 +510,8 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     final String configSet = getRequiredParam(CONFIG_SET_PARAM, req);
     final String mutableId = checkMutable(configSet, req);
 
-    // verify the configSet we're going to apply changes to has not changed since being loaded for
+    // verify the configSet we're going to apply changes to hasn't been changed since being loaded
+    // for
     // editing by the schema designer
     SchemaDesignerSettings settings = settingsDAO.getSettings(mutableId);
     final Optional<Integer> publishedVersion = settings.getPublishedVersion();
@@ -577,7 +569,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
       int rf = req.getParams().getInt("replicationFactor", 1);
       configSetHelper.createCollection(newCollection, configSet, numShards, rf);
       if (req.getParams().getBool(INDEX_TO_COLLECTION_PARAM, false)) {
-        List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+        List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
         if (!docs.isEmpty()) {
           ManagedIndexSchema schema = loadLatestSchema(mutableId);
           errorsDuringIndexing =
@@ -662,7 +654,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     if (languages != null) {
       langs =
           languages.length == 0 || (languages.length == 1 && "*".equals(languages[0]))
-              ? Collections.emptyList()
+              ? List.of()
               : Arrays.asList(languages);
       if (!langs.equals(settings.getLanguages())) {
         settings.setLanguages(langs);
@@ -779,7 +771,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
           mutableId,
           version,
           currentVersion);
-      List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+      List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
       ManagedIndexSchema schema = loadLatestSchema(mutableId);
       errorsDuringIndexing =
           indexSampleDocsWithRebuildOnAnalysisError(
@@ -835,7 +827,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
       if (!docs.isEmpty()) {
         // user posted in some docs, if there are already docs stored in the blob store, then add
         // these to the existing set
-        List<SolrInputDocument> stored = configSetHelper.getStoredSampleDocs(configSet);
+        List<SolrInputDocument> stored = configSetHelper.retrieveSampleDocs(configSet);
         if (!stored.isEmpty()) {
           // keep the docs in the request as newest
           ManagedIndexSchema latestSchema = loadLatestSchema(getMutableId(configSet));
@@ -844,14 +836,14 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
                   latestSchema.getUniqueKeyField().getName(), stored, MAX_SAMPLE_DOCS);
         }
 
-        // store in the blob store so we always have access to these docs
+        // store in the Filestore so that we always have access to these docs
         configSetHelper.storeSampleDocs(configSet, docs);
       }
     }
 
     if (docs == null || docs.isEmpty()) {
       // no sample docs in the request ... find in blob store (or fail if no docs previously stored)
-      docs = configSetHelper.getStoredSampleDocs(configSet);
+      docs = configSetHelper.retrieveSampleDocs(configSet);
 
       // no docs? but if this schema has already been published, it's OK, we can skip the docs part
       if (docs.isEmpty() && !configExists(configSet)) {
@@ -871,7 +863,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     // collect the fields to add ... adding all fields at once is faster than one-at-a-time
     List<SchemaField> fieldsToAdd = new ArrayList<>();
     for (String field : docs.keySet()) {
-      List<Object> sampleValues = docs.getOrDefault(field, Collections.emptyList());
+      List<Object> sampleValues = docs.getOrDefault(field, List.of());
 
       // Collapse all whitespace in fields to a single underscore
       String normalizedField = field.trim().replaceAll("\\s+", "_");
@@ -889,10 +881,6 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
       schema = (ManagedIndexSchema) schema.addFields(fieldsToAdd);
     }
     return schema;
-  }
-
-  protected String getManagedSchemaZkPath(final String configSet) {
-    return getConfigSetZkPath(configSet, DEFAULT_MANAGED_SCHEMA_RESOURCE_NAME);
   }
 
   protected SchemaDesignerSettings getMutableSchemaForConfigSet(
@@ -987,9 +975,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
   }
 
   protected CloudSolrClient cloudClient() {
-    return coreContainer
-        .getSolrClientCache()
-        .getCloudSolrClient(coreContainer.getZkController().getZkServerAddress());
+    return coreContainer.getZkController().getSolrClient();
   }
 
   protected ZkStateReader zkStateReader() {
@@ -1132,8 +1118,9 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     Map<String, Object> response = new HashMap<>();
 
     DocCollection coll = zkStateReader().getCollection(mutableId);
-    if (coll.getActiveSlicesArr().length > 0) {
-      String coreName = coll.getActiveSlicesArr()[0].getLeader().getCoreName();
+    Collection<Slice> activeSlices = coll.getActiveSlices();
+    if (!activeSlices.isEmpty()) {
+      String coreName = activeSlices.stream().findAny().orElseThrow().getLeader().getCoreName();
       response.put("core", coreName);
     }
 
@@ -1363,7 +1350,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
   private boolean pathExistsInZk(final String zkPath) throws IOException {
     SolrZkClient zkClient = zkStateReader().getZkClient();
     try {
-      return zkClient.exists(zkPath, true);
+      return zkClient.exists(zkPath);
     } catch (KeeperException | InterruptedException e) {
       throw new IOException(
           "Failed to check if path exists: " + zkPath, SolrZkClient.checkInterrupted(e));
