@@ -81,6 +81,7 @@ import org.apache.solr.request.SolrRequestInfo;
 import org.apache.solr.schema.CurrencyFieldType;
 import org.apache.solr.schema.FieldType;
 import org.apache.solr.schema.IndexSchema;
+import org.apache.solr.schema.LateInteractionVectorField;
 import org.apache.solr.schema.SchemaField;
 import org.apache.solr.schema.StrField;
 import org.apache.solr.schema.TextField;
@@ -121,8 +122,11 @@ import org.apache.solr.util.plugin.NamedListInitializedPlugin;
 import org.locationtech.spatial4j.distance.DistanceUtils;
 
 /**
- * A factory that parses user queries to generate ValueSource instances. Intended usage is to create
- * pluggable, named functions for use in function queries.
+ * A factory parsing arguments (from {@link FunctionQParser}) into a real function whose results are
+ * emitted from a {@link ValueSource}. Custom ones can be registered by name and configured in
+ * {@code solrconfig.xml}.
+ *
+ * @see FunctionQParser
  */
 public abstract class ValueSourceParser implements NamedListInitializedPlugin {
   /** Parse the user input into a ValueSource. */
@@ -187,7 +191,7 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
         new ValueSourceParser() {
           @Override
           public ValueSource parse(FunctionQParser fp) throws SyntaxError {
-            return new LongConstValueSource(Thread.currentThread().getId());
+            return new LongConstValueSource(Thread.currentThread().threadId());
           }
         });
     addParser(
@@ -541,12 +545,11 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
 
             String fieldName = fp.parseArg();
             SchemaField f = fp.getReq().getSchema().getField(fieldName);
-            if (!(f.getType() instanceof CurrencyFieldType)) {
+            if (!(f.getType() instanceof CurrencyFieldType ft)) {
               throw new SolrException(
                   SolrException.ErrorCode.BAD_REQUEST,
                   "Currency function input must be the name of a CurrencyFieldType: " + fieldName);
             }
-            CurrencyFieldType ft = (CurrencyFieldType) f.getType();
             String code = fp.hasMoreArguments() ? fp.parseArg() : null;
             return ft.getConvertedValueSource(code, ft.getValueSource(f, fp));
           }
@@ -1357,6 +1360,31 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
         });
 
     addParser("childfield", new ChildFieldValueSourceParser());
+
+    addParser(
+        "lateVector",
+        new ValueSourceParser() {
+
+          @Override
+          public ValueSource parse(final FunctionQParser fp) throws SyntaxError {
+
+            final String fieldName = fp.parseArg();
+            if (null == fieldName) {
+              throw new SolrException(
+                  SolrException.ErrorCode.BAD_REQUEST,
+                  "Invalid arguments. First argument must be a field name");
+            }
+            final FieldType ft = fp.getReq().getSchema().getFieldType(fieldName);
+            if (ft instanceof LateInteractionVectorField lift) {
+              return ValueSource.fromDoubleValuesSource(
+                  lift.parseLateInteractionValuesSource(fieldName, fp));
+            }
+            throw new SolrException(
+                SolrException.ErrorCode.BAD_REQUEST,
+                "Field name is not defined in schema as a StrFloatLateInteractionVectorField: "
+                    + fieldName);
+          }
+        });
   }
 
   ///////////////////////////////////////////////////////////////////////////////
@@ -1424,8 +1452,8 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
             SolrException.ErrorCode.BAD_REQUEST,
             "Illegal number of sources.  There must be an even number of sources");
       } else {
-        mvr.mv1 = new VectorValueSource(Collections.singletonList(sources.get(0)));
-        mvr.mv2 = new VectorValueSource(Collections.singletonList(sources.get(1)));
+        mvr.mv1 = new VectorValueSource(List.of(sources.get(0)));
+        mvr.mv2 = new VectorValueSource(List.of(sources.get(1)));
       }
     } else {
       int dim = sources.size() / 2;
@@ -1606,8 +1634,7 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
 
     @Override
     public boolean equals(Object o) {
-      if (!(o instanceof LongConstValueSource)) return false;
-      LongConstValueSource other = (LongConstValueSource) o;
+      if (!(o instanceof LongConstValueSource other)) return false;
       return this.constant == other.constant;
     }
 
@@ -1759,8 +1786,7 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
 
       @Override
       public boolean equals(Object o) {
-        if (!(o instanceof Function)) return false;
-        Function other = (Function) o;
+        if (!(o instanceof Function other)) return false;
         return this.a.equals(other.a) && this.b.equals(other.b);
       }
     }
@@ -1799,8 +1825,7 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
 
     @Override
     public boolean equals(Object o) {
-      if (!(o instanceof BoolConstValueSource)) return false;
-      BoolConstValueSource other = (BoolConstValueSource) o;
+      if (!(o instanceof BoolConstValueSource other)) return false;
       return this.constant == other.constant;
     }
 
