@@ -16,19 +16,17 @@
  */
 package org.apache.solr.core;
 
-import static org.apache.solr.servlet.SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE;
+import static org.apache.solr.servlet.CoreContainerProvider.SOLR_INSTALL_DIR;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsInstanceOf.instanceOf;
 
-import java.io.File;
 import java.io.FileOutputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -45,9 +43,8 @@ import org.apache.solr.handler.admin.CollectionsHandler;
 import org.apache.solr.handler.admin.ConfigSetsHandler;
 import org.apache.solr.handler.admin.CoreAdminHandler;
 import org.apache.solr.handler.admin.InfoHandler;
-import org.apache.solr.servlet.SolrDispatchFilter;
+import org.apache.solr.servlet.CoreContainerProvider;
 import org.apache.solr.util.ModuleUtils;
-import org.junit.AfterClass;
 import org.junit.Assume;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -55,22 +52,11 @@ import org.xml.sax.SAXParseException;
 
 public class TestCoreContainer extends SolrTestCaseJ4 {
 
-  private static String oldSolrHome;
   private static final String SOLR_HOME_PROP = "solr.solr.home";
 
   @BeforeClass
   public static void beforeClass() {
-    oldSolrHome = System.getProperty(SOLR_HOME_PROP);
-    System.setProperty("configsets", getFile("solr/configsets").getAbsolutePath());
-  }
-
-  @AfterClass
-  public static void afterClass() {
-    if (oldSolrHome != null) {
-      System.setProperty(SOLR_HOME_PROP, oldSolrHome);
-    } else {
-      System.clearProperty(SOLR_HOME_PROP);
-    }
+    System.setProperty("configsets", getFile("solr/configsets").toAbsolutePath().toString());
   }
 
   private CoreContainer init(String xml) throws Exception {
@@ -95,7 +81,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     try {
 
       // instance dir & resource loader for the CC
-      assertEquals(realSolrHome.toString(), cc.getSolrHome());
+      assertEquals(realSolrHome, cc.getSolrHome());
       assertEquals(realSolrHome, cc.getResourceLoader().getInstancePath());
 
     } finally {
@@ -121,7 +107,6 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
 
     } finally {
       cores.shutdown();
-      System.clearProperty("shareSchema");
     }
   }
 
@@ -320,7 +305,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     MockCoresLocator cl = new MockCoresLocator();
 
     Path solrHome = createTempDir();
-    System.setProperty("configsets", getFile("solr/configsets").getAbsolutePath());
+    System.setProperty("configsets", getFile("solr/configsets").toAbsolutePath().toString());
 
     final CoreContainer cc =
         new CoreContainer(SolrXmlConfig.fromString(solrHome, CONFIGSETS_SOLR_XML), cl);
@@ -369,29 +354,29 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
   public void testSharedLib() throws Exception {
     Path tmpRoot = createTempDir("testSharedLib");
 
-    File lib = new File(tmpRoot.toFile(), "lib");
-    lib.mkdirs();
+    Path lib = tmpRoot.resolve("lib");
+    Files.createDirectories(lib);
 
     try (JarOutputStream jar1 =
-        new JarOutputStream(new FileOutputStream(new File(lib, "jar1.jar")))) {
+        new JarOutputStream(Files.newOutputStream(lib.resolve("jar1.jar")))) {
       jar1.putNextEntry(new JarEntry("defaultSharedLibFile"));
       jar1.closeEntry();
     }
 
-    File customLib = new File(tmpRoot.toFile(), "customLib");
-    customLib.mkdirs();
+    Path customLib = tmpRoot.resolve("customLib");
+    Files.createDirectories(customLib);
 
     try (JarOutputStream jar2 =
-        new JarOutputStream(new FileOutputStream(new File(customLib, "jar2.jar")))) {
+        new JarOutputStream(Files.newOutputStream(customLib.resolve("jar2.jar")))) {
       jar2.putNextEntry(new JarEntry("customSharedLibFile"));
       jar2.closeEntry();
     }
 
-    File customLib2 = new File(tmpRoot.toFile(), "customLib2");
-    customLib2.mkdirs();
+    Path customLib2 = tmpRoot.resolve("customLib2");
+    Files.createDirectories(customLib2);
 
     try (JarOutputStream jar3 =
-        new JarOutputStream(new FileOutputStream(new File(customLib2, "jar3.jar")))) {
+        new JarOutputStream(Files.newOutputStream(customLib2.resolve("jar3.jar")))) {
       jar3.putNextEntry(new JarEntry("jar3File"));
       jar3.closeEntry();
     }
@@ -436,17 +421,15 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
   public void testModuleLibs() throws Exception {
     Path tmpRoot = createTempDir("testModLib");
 
-    File lib = Files.createDirectories(ModuleUtils.getModuleLibPath(tmpRoot, "mod1")).toFile();
-    ;
+    Path lib = Files.createDirectories(ModuleUtils.getModuleLibPath(tmpRoot, "mod1"));
 
     try (JarOutputStream jar1 =
-        new JarOutputStream(new FileOutputStream(new File(lib, "jar1.jar")))) {
+        new JarOutputStream(Files.newOutputStream(lib.resolve("jar1.jar")))) {
       jar1.putNextEntry(new JarEntry("moduleLibFile"));
       jar1.closeEntry();
     }
 
-    System.setProperty(
-        SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE, tmpRoot.toAbsolutePath().toString());
+    System.setProperty(CoreContainerProvider.SOLR_INSTALL_DIR, tmpRoot.toAbsolutePath().toString());
     final CoreContainer cc1 = init(tmpRoot, "<solr></solr>");
     try {
       assertThrows(
@@ -469,8 +452,6 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
             SolrException.class,
             () -> init(tmpRoot, "<solr><str name=\"modules\">nope</str></solr>"));
     assertEquals("No module with name nope", ex.getMessage());
-
-    System.clearProperty(SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
   }
 
   @Test
@@ -484,7 +465,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
       jar1.closeEntry();
     }
 
-    System.setProperty(SOLR_INSTALL_DIR_ATTRIBUTE, installDirPath.toString());
+    System.setProperty(SOLR_INSTALL_DIR, installDirPath.toString());
 
     final CoreContainer cores = init(CONFIGSETS_SOLR_XML);
     try {
@@ -509,7 +490,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
   private static final String ALLOW_PATHS_SOLR_XML =
       "<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n"
           + "<solr>\n"
-          + "<str name=\"allowPaths\">${solr.allowPaths:}</str>\n"
+          + "<str name=\"allowPaths\">${solr.security.allow.paths:}</str>\n"
           + "</solr>";
 
   private static final String CUSTOM_HANDLERS_SOLR_XML =
@@ -575,7 +556,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
         String configName, String fileName, byte[] data, boolean overwriteOnExists) {}
 
     @Override
-    public void setConfigMetadata(String configName, Map<String, Object> data) {}
+    protected void setConfigMetadata(String configName, Map<String, Object> data) {}
 
     @Override
     public Map<String, Object> getConfigMetadata(String configName) {
@@ -633,34 +614,32 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
   @Test
   public void assertAllowPathFromSolrXml() throws Exception {
     Assume.assumeFalse(OS.isFamilyWindows());
-    System.setProperty("solr.allowPaths", "/var/solr");
+    System.setProperty("solr.security.allow.paths", "/var/solr");
     CoreContainer cc = init(ALLOW_PATHS_SOLR_XML);
-    cc.assertPathAllowed(Paths.get("/var/solr/foo"));
+    cc.assertPathAllowed(Path.of("/var/solr/foo"));
     try {
-      cc.assertPathAllowed(Paths.get("/tmp"));
+      cc.assertPathAllowed(Path.of("/tmp"));
       fail("Path /tmp should not be allowed");
     } catch (SolrException e) {
       /* Ignore */
     } finally {
       cc.shutdown();
-      System.clearProperty("solr.allowPaths");
     }
   }
 
   @Test
   public void assertAllowPathFromSolrXmlWin() throws Exception {
     Assume.assumeTrue(OS.isFamilyWindows());
-    System.setProperty("solr.allowPaths", "C:\\solr");
+    System.setProperty("solr.security.allow.paths", "C:\\solr");
     CoreContainer cc = init(ALLOW_PATHS_SOLR_XML);
-    cc.assertPathAllowed(Paths.get("C:\\solr\\foo"));
+    cc.assertPathAllowed(Path.of("C:\\solr\\foo"));
     try {
-      cc.assertPathAllowed(Paths.get("C:\\tmp"));
+      cc.assertPathAllowed(Path.of("C:\\tmp"));
       fail("Path C:\\tmp should not be allowed");
     } catch (SolrException e) {
       /* Ignore */
     } finally {
       cc.shutdown();
-      System.clearProperty("solr.allowPaths");
     }
   }
 
@@ -694,33 +673,31 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
   @Test
   public void assertAllowPathNormalization() throws Exception {
     Assume.assumeFalse(OS.isFamilyWindows());
-    System.setProperty("solr.allowPaths", "/var/solr/../solr");
+    System.setProperty("solr.security.allow.paths", "/var/solr/../solr");
     CoreContainer cc = init(ALLOW_PATHS_SOLR_XML);
-    cc.assertPathAllowed(Paths.get("/var/solr/foo"));
+    cc.assertPathAllowed(Path.of("/var/solr/foo"));
     assertThrows(
         "Path /tmp should not be allowed",
         SolrException.class,
         () -> {
-          cc.assertPathAllowed(Paths.get("/tmp"));
+          cc.assertPathAllowed(Path.of("/tmp"));
         });
     cc.shutdown();
-    System.clearProperty("solr.allowPaths");
   }
 
   @Test
   public void assertAllowPathNormalizationWin() throws Exception {
     Assume.assumeTrue(OS.isFamilyWindows());
-    System.setProperty("solr.allowPaths", "C:\\solr\\..\\solr");
+    System.setProperty("solr.security.allow.paths", "C:\\solr\\..\\solr");
     CoreContainer cc = init(ALLOW_PATHS_SOLR_XML);
-    cc.assertPathAllowed(Paths.get("C:\\solr\\foo"));
+    cc.assertPathAllowed(Path.of("C:\\solr\\foo"));
     assertThrows(
         "Path C:\\tmp should not be allowed",
         SolrException.class,
         () -> {
-          cc.assertPathAllowed(Paths.get("C:\\tmp"));
+          cc.assertPathAllowed(Path.of("C:\\tmp"));
         });
     cc.shutdown();
-    System.clearProperty("solr.allowPaths");
   }
 
   private static Set<Path> ALLOWED_PATHS = Set.of(Path.of("/var/solr"));
@@ -939,7 +916,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
 
     Path solrHome = createTempDir();
 
-    System.setProperty("configsets", getFile("solr/configsets").getAbsolutePath());
+    System.setProperty("configsets", getFile("solr/configsets").toAbsolutePath().toString());
 
     final CoreContainer cc =
         new CoreContainer(SolrXmlConfig.fromString(solrHome, CONFIGSETS_SOLR_XML), cl);
@@ -983,14 +960,14 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
 
     // -----
     // "fix" the bad collection
-    Path confDir = Path.of(cc.getSolrHome(), "col_bad", "conf");
+    Path confDir = cc.getSolrHome().resolve("col_bad").resolve("conf");
     Files.createDirectories(confDir);
     Files.copy(
-        getFile("solr/collection1/conf/solrconfig-defaults.xml").toPath(),
+        getFile("solr/collection1/conf/solrconfig-defaults.xml"),
         confDir.resolve("solrconfig.xml"),
         StandardCopyOption.REPLACE_EXISTING);
     Files.copy(
-        getFile("solr/collection1/conf/schema-minimal.xml").toPath(),
+        getFile("solr/collection1/conf/schema-minimal.xml"),
         confDir.resolve("schema.xml"),
         StandardCopyOption.REPLACE_EXISTING);
     cc.create("col_bad", Map.of());
@@ -1059,7 +1036,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     final long col_bad_old_start = getCoreStartTime(cc, "col_bad");
 
     Files.writeString(
-        Path.of(cc.getSolrHome(), "col_bad", "conf", "solrconfig.xml"),
+        cc.getSolrHome().resolve("col_bad").resolve("conf").resolve("solrconfig.xml"),
         "This is giberish, not valid XML <",
         StandardCharsets.UTF_8);
 
@@ -1107,7 +1084,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     // ----
     // fix col_bad's config (again) and RELOAD to fix failure
     Files.copy(
-        getFile("solr/collection1/conf/solrconfig-defaults.xml").toPath(),
+        getFile("solr/collection1/conf/solrconfig-defaults.xml"),
         confDir.resolve("solrconfig.xml"),
         StandardCopyOption.REPLACE_EXISTING);
     cc.reload("col_bad");
