@@ -19,7 +19,8 @@ package org.apache.solr.search;
 
 import java.io.StringWriter;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.index.IndexableField;
@@ -27,7 +28,6 @@ import org.apache.lucene.misc.document.LazyDocument;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.util.XML;
 import org.apache.solr.schema.IndexSchema;
-import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -43,7 +43,7 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
     System.setProperty("managed.schema.mutable", "true");
     System.setProperty(
         "managed.schema.resourceName", "schema-one-field-no-dynamic-field-unique-key.xml");
-    System.setProperty("enable.update.log", "false");
+    System.setProperty("solr.index.updatelog.enabled", "false");
     System.setProperty("documentCache.enabled", "true");
     System.setProperty("enableLazyFieldLoading", "true");
 
@@ -54,7 +54,7 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
     IndexSchema schema = h.getCore().getLatestSchema();
     schema =
         schema.addFieldTypes(
-            Collections.singletonList(
+            List.of(
                 schema.newFieldType(
                     "textType",
                     "solr.TextField", // redundant; TODO improve api
@@ -71,16 +71,10 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
             Arrays.asList(
                 schema.newField(LAZY_FIELD, "textType", map()),
                 schema.newField(BIG_FIELD, "textType", map("large", true))),
-            Collections.emptyMap(),
+            Map.of(),
             PERSIST_FALSE);
 
     h.getCore().setLatestSchema(schema);
-  }
-
-  @AfterClass
-  public static void afterClass() {
-    System.clearProperty("documentCache.enabled");
-    System.clearProperty("enableLazyFieldLoading");
   }
 
   @Test
@@ -96,7 +90,7 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
     assertQ(req("q", "101", "df", ID_FLD, "fl", ID_FLD)); // eager load ID_FLD; rest are lazy
 
     // fetch the document; we know it will be from the documentCache, docId 0
-    final Document d = h.getCore().withSearcher(searcher -> searcher.doc(0));
+    final Document d = h.getCore().withSearcher(searcher -> searcher.getDocFetcher().doc(0));
 
     assertEager(d, ID_FLD);
     assertLazyNotLoaded(d, LAZY_FIELD);
