@@ -17,20 +17,18 @@
 
 package org.apache.solr.common.cloud;
 
-import java.io.File;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.nio.file.FileSystems;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
-import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -66,28 +64,27 @@ public class ZkMaintenanceUtils {
    * Lists a ZNode child and (optionally) the znodes of all the children. No data is dumped.
    *
    * @param path The node to remove on Zookeeper
-   * @param recurse Whether to remove children.
+   * @param recursive Whether to remove children.
    * @throws KeeperException Could not perform the Zookeeper operation.
    * @throws InterruptedException Thread interrupted
-   * @throws SolrServerException zookeeper node has children and recurse not specified.
    * @return an indented list of the znodes suitable for display
    */
-  public static String listZnode(SolrZkClient zkClient, String path, Boolean recurse)
-      throws KeeperException, InterruptedException, SolrServerException {
+  public static String listZnode(SolrZkClient zkClient, String path, Boolean recursive)
+      throws KeeperException, InterruptedException {
     String root = path;
 
     if (path.toLowerCase(Locale.ROOT).startsWith("zk:")) {
       root = path.substring(3);
     }
-    if (root.equals("/") == false && root.endsWith("/")) {
+    if (!root.equals("/") && root.endsWith("/")) {
       root = root.substring(0, root.length() - 1);
     }
 
     StringBuilder sb = new StringBuilder();
 
-    if (recurse == false) {
-      for (String node : zkClient.getChildren(root, null, true)) {
-        if (node.equals("zookeeper") == false) {
+    if (!recursive) {
+      for (String node : zkClient.getChildren(root, null)) {
+        if (!node.equals("zookeeper")) {
           sb.append(node).append(System.lineSeparator());
         }
       }
@@ -102,7 +99,9 @@ public class ZkMaintenanceUtils {
           if (znode.startsWith("/zookeeper")) return; // can't do anything with this node!
           int iPos = znode.lastIndexOf('/');
           if (iPos > 0) {
-            for (int idx = 0; idx < iPos; ++idx) sb.append(" ");
+            for (int idx = 0; idx < iPos; ++idx) {
+              sb.append(" ");
+            }
             sb.append(znode.substring(iPos + 1)).append(System.lineSeparator());
           } else {
             sb.append(znode).append(System.lineSeparator());
@@ -117,9 +116,9 @@ public class ZkMaintenanceUtils {
    * copying recursively.
    *
    * @param src Source to copy from. Both src and dst may be Znodes. However, both may NOT be local
-   * @param dst The place to copy the files too. Both src and dst may be Znodes. However both may
+   * @param dst The place to copy the files too. Both src and dst may be Znodes. However, both may
    *     NOT be local
-   * @param recurse if the source is a directory, reccursively copy the contents iff this is true.
+   * @param recursive if the source is a directory, recursively copy the contents iff this is true.
    * @throws SolrServerException Explanatory exception due to bad params, failed operation, etc.
    * @throws KeeperException Could not perform the Zookeeper operation.
    * @throws InterruptedException Thread interrupted
@@ -130,25 +129,23 @@ public class ZkMaintenanceUtils {
       Boolean srcIsZk,
       String dst,
       Boolean dstIsZk,
-      Boolean recurse)
+      Boolean recursive)
       throws SolrServerException, KeeperException, InterruptedException, IOException {
 
-    if (srcIsZk == false && dstIsZk == false) {
+    if (!srcIsZk && !dstIsZk) {
       throw new SolrServerException("One or both of source or destination must specify ZK nodes.");
     }
 
-    // Make sure -recurse is specified if the source has children.
-    if (recurse == false) {
+    // Make sure --recursive is specified if the source has children.
+    if (!recursive) {
       if (srcIsZk) {
-        if (zkClient.getChildren(src, null, true).size() != 0) {
+        if (zkClient.getChildren(src, null).size() != 0) {
           throw new SolrServerException(
-              "Zookeeper node " + src + " has children and recurse is false");
+              "Zookeeper node " + src + " has children and recursive is false");
         }
-      } else if (Files.isDirectory(Paths.get(src))) {
+      } else if (Files.isDirectory(Path.of(src))) {
         throw new SolrServerException(
-            "Local path "
-                + Paths.get(src).toAbsolutePath()
-                + " is a directory and recurse is false");
+            "Local path " + Path.of(src).toAbsolutePath() + " is a directory and recurse is false");
       }
     }
 
@@ -165,27 +162,27 @@ public class ZkMaintenanceUtils {
 
     // local -> ZK copy
     if (dstIsZk) {
-      uploadToZK(zkClient, Paths.get(src), dst, null);
+      uploadToZK(zkClient, Path.of(src), dst, null);
       return;
     }
 
     // Copying individual files from ZK requires special handling since downloadFromZK assumes the
     // node has children. This is kind of a weak test for the notion of "directory" on Zookeeper. ZK
     // -> local copy where ZK is a parent node
-    if (zkClient.getChildren(src, null, true).size() > 0) {
-      downloadFromZK(zkClient, src, Paths.get(dst));
+    if (zkClient.getChildren(src, null).size() > 0) {
+      downloadFromZK(zkClient, src, Path.of(dst));
       return;
     }
 
     // Single file ZK -> local copy where ZK is a leaf node
-    if (Files.isDirectory(Paths.get(dst))) {
-      if (dst.endsWith(File.separator) == false) {
-        dst += File.separator;
+    if (Files.isDirectory(Path.of(dst))) {
+      if (!dst.endsWith(FileSystems.getDefault().getSeparator())) {
+        dst += FileSystems.getDefault().getSeparator();
       }
       dst = normalizeDest(src, dst, srcIsZk, dstIsZk);
     }
-    byte[] data = zkClient.getData(src, null, null, true);
-    Path filename = Paths.get(dst);
+    byte[] data = zkClient.getData(src, null, null);
+    Path filename = Path.of(dst);
     Path parentDir = filename.getParent();
     if (parentDir != null) {
       Files.createDirectories(parentDir);
@@ -200,11 +197,11 @@ public class ZkMaintenanceUtils {
       String srcName, String dstName, boolean srcIsZk, boolean dstIsZk) {
     // Special handling for "."
     if (dstName.equals(".")) {
-      return Paths.get(".").normalize().toAbsolutePath().toString();
+      return Path.of(".").normalize().toAbsolutePath().toString();
     }
 
-    String dstSeparator = (dstIsZk) ? "/" : File.separator;
-    String srcSeparator = (srcIsZk) ? "/" : File.separator;
+    String dstSeparator = (dstIsZk) ? "/" : FileSystems.getDefault().getSeparator();
+    String srcSeparator = (srcIsZk) ? "/" : FileSystems.getDefault().getSeparator();
 
     // Dest is a directory or non-leaf znode, append last element of the src path.
     if (dstName.endsWith(dstSeparator)) {
@@ -225,9 +222,9 @@ public class ZkMaintenanceUtils {
     String destName = normalizeDest(src, dst, true, true);
 
     // Special handling if the source has no children, i.e. copying just a single file.
-    if (zkClient.getChildren(src, null, true).size() == 0) {
-      zkClient.makePath(destName, false, true);
-      zkClient.setData(destName, zkClient.getData(src, null, null, true), true);
+    if (zkClient.getChildren(src, null).size() == 0) {
+      zkClient.makePath(destName, false);
+      zkClient.setData(destName, zkClient.getData(src, null, null));
     } else {
       traverseZkTree(zkClient, src, VISIT_ORDER.VISIT_PRE, new ZkCopier(zkClient, src, destName));
     }
@@ -239,13 +236,13 @@ public class ZkMaintenanceUtils {
     clean(zkClient, src);
   }
 
-  // Insure that all the nodes in one path match the nodes in the other as a safety check before
+  // Ensure that all the nodes in one path match the nodes in the other as a safety check before
   // removing the source in a 'mv' command.
   private static void checkAllZnodesThere(SolrZkClient zkClient, String src, String dst)
       throws KeeperException, InterruptedException, SolrServerException {
 
-    for (String node : zkClient.getChildren(src, null, true)) {
-      if (zkClient.exists(dst + "/" + node, true) == false) {
+    for (String node : zkClient.getChildren(src, null)) {
+      if (!zkClient.exists(dst + "/" + node)) {
         throw new SolrServerException(
             "mv command did not move node " + dst + "/" + node + " source left intact");
       }
@@ -264,7 +261,7 @@ public class ZkMaintenanceUtils {
           try {
             if (!znode.equals("/")) {
               try {
-                zkClient.delete(znode, -1, true);
+                zkClient.delete(znode, -1);
               } catch (KeeperException.NotEmptyException e) {
                 clean(zkClient, znode);
               }
@@ -303,7 +300,7 @@ public class ZkMaintenanceUtils {
     for (String subpath : paths) {
       if (!subpath.equals("/")) {
         try {
-          zkClient.delete(subpath, -1, true);
+          zkClient.delete(subpath, -1);
         } catch (KeeperException.NotEmptyException | KeeperException.NoNodeException e) {
           // expected
         }
@@ -323,7 +320,7 @@ public class ZkMaintenanceUtils {
       path = path.substring(0, path.length() - 1);
     }
 
-    final Path rootPath = Paths.get(path);
+    final Path rootPath = Path.of(path);
 
     if (!Files.exists(rootPath)) {
       throw new IOException("Path " + rootPath + " does not exist");
@@ -345,27 +342,16 @@ public class ZkMaintenanceUtils {
                   filenameExclusions);
               return FileVisitResult.CONTINUE;
             }
-            if (isFileForbiddenInConfigSets(filename)) {
-              log.info(
-                  "uploadToZK skipping '{}' due to forbidden file types '{}'",
-                  filename,
-                  USE_FORBIDDEN_FILE_TYPES);
-              return FileVisitResult.CONTINUE;
-            }
             // TODO: Cannot check MAGIC header for file since FileTypeGuesser is in core
             String zkNode = createZkNodeName(zkPath, rootPath, file);
             try {
               // if the path exists (and presumably we're uploading data to it) just set its data
-              if (file.toFile().getName().equals(ZKNODE_DATA_FILE)
-                  && zkClient.exists(zkNode, true)) {
-                zkClient.setData(zkNode, file, true);
-              } else if (file == rootPath) {
+              if (file.getFileName().toString().equals(ZKNODE_DATA_FILE)
+                  && zkClient.exists(zkNode)) {
+                zkClient.setData(zkNode, file);
+              } else if (file.equals(rootPath)) {
                 // We are only uploading a single file, preVisitDirectory was never called
-                if (zkClient.exists(zkPath, true)) {
-                  zkClient.setData(zkPath, file, true);
-                } else {
-                  zkClient.makePath(zkPath, Files.readAllBytes(file), false, true);
-                }
+                zkClient.makePath(zkPath, Files.readAllBytes(file), false);
               } else {
                 // Skip path parts here because they should have been created during
                 // preVisitDirectory
@@ -376,7 +362,6 @@ public class ZkMaintenanceUtils {
                     CreateMode.PERSISTENT,
                     null,
                     false,
-                    true,
                     pathParts);
               }
 
@@ -401,7 +386,7 @@ public class ZkMaintenanceUtils {
               } else {
                 // Skip path parts here because they should have been created during previous visits
                 int pathParts = dir.getNameCount() + partsOffset;
-                zkClient.makePath(zkNode, null, CreateMode.PERSISTENT, null, true, true, pathParts);
+                zkClient.makePath(zkNode, null, CreateMode.PERSISTENT, null, true, pathParts);
               }
             } catch (KeeperException.NodeExistsException ignored) {
               // Using fail-on-exists == false has side effect of makePath attempting to setData on
@@ -420,13 +405,13 @@ public class ZkMaintenanceUtils {
 
   private static boolean isEphemeral(SolrZkClient zkClient, String zkPath)
       throws KeeperException, InterruptedException {
-    Stat znodeStat = zkClient.exists(zkPath, null, true);
+    Stat znodeStat = zkClient.exists(zkPath, null);
     return znodeStat.getEphemeralOwner() != 0;
   }
 
   private static int copyDataDown(SolrZkClient zkClient, String zkPath, Path file)
       throws IOException, KeeperException, InterruptedException {
-    byte[] data = zkClient.getData(zkPath, null, null, true);
+    byte[] data = zkClient.getData(zkPath, null, null);
     if (data != null && data.length > 0) { // There are apparently basically empty ZNodes.
       log.info("Writing file {}", file);
       Files.write(file, data);
@@ -438,19 +423,15 @@ public class ZkMaintenanceUtils {
   public static void downloadFromZK(SolrZkClient zkClient, String zkPath, Path file)
       throws IOException {
     try {
-      List<String> children = zkClient.getChildren(zkPath, null, true);
+      List<String> children = zkClient.getChildren(zkPath, null);
       // If it has no children, it's a leaf node, write the associated data from the ZNode.
-      // Otherwise, continue recursing, but write the associated data to a special file if any
+      // Otherwise, continue recursively traversing, but write any associated data to a special file
       if (children.size() == 0) {
         // If we didn't copy data down, then we also didn't create the file. But we still need a
         // marker on the local disk so create an empty file.
-        if (isFileForbiddenInConfigSets(zkPath)) {
-          log.warn("Skipping download of file from ZK, as it is a forbidden type: {}", zkPath);
-        } else {
-          // TODO: Cannot check MAGIC header for file since FileTypeGuesser is in core
-          if (copyDataDown(zkClient, zkPath, file) == 0) {
-            Files.createFile(file);
-          }
+        // TODO: Cannot check MAGIC header for file since FileTypeGuesser is in core
+        if (copyDataDown(zkClient, zkPath, file) == 0) {
+          Files.createFile(file);
         }
       } else {
         Files.createDirectories(file); // Make parent dir.
@@ -460,7 +441,9 @@ public class ZkMaintenanceUtils {
 
         for (String child : children) {
           String zkChild = zkPath;
-          if (zkChild.endsWith("/") == false) zkChild += "/";
+          if (!zkChild.endsWith("/")) {
+            zkChild += "/";
+          }
           zkChild += child;
           if (isEphemeral(zkClient, zkChild)) { // Don't copy ephemeral nodes
             continue;
@@ -493,10 +476,10 @@ public class ZkMaintenanceUtils {
 
   /**
    * Recursively visit a zk tree rooted at path and apply the given visitor to each path. Exists as
-   * a separate method because some of the logic can get nuanced.
+   * a separate method because the logic can get nuanced.
    *
    * @param path the path to start from
-   * @param visitOrder whether to call the visitor at the at the ending or beginning of the run.
+   * @param visitOrder whether to call the visitor at the ending or beginning of the run.
    * @param visitor the operation to perform on each path
    */
   public static void traverseZkTree(
@@ -510,7 +493,7 @@ public class ZkMaintenanceUtils {
     }
     List<String> children;
     try {
-      children = zkClient.getChildren(path, null, true);
+      children = zkClient.getChildren(path, null);
     } catch (KeeperException.NoNodeException r) {
       return;
     }
@@ -555,14 +538,17 @@ public class ZkMaintenanceUtils {
   public static String createZkNodeName(String zkRoot, Path root, Path file) {
     String relativePath = root.relativize(file).toString();
     // Windows shenanigans
-    if ("\\".equals(File.separator)) relativePath = relativePath.replace("\\", "/");
+    if ("\\".equals(FileSystems.getDefault().getSeparator()))
+      relativePath = relativePath.replace("\\", "/");
     // It's possible that the relative path and file are the same, in which case
     // adding the bare slash is A Bad Idea unless it's a non-leaf data node
-    boolean isNonLeafData = file.toFile().getName().equals(ZKNODE_DATA_FILE);
-    if (relativePath.length() == 0 && isNonLeafData == false) return zkRoot;
+    boolean isNonLeafData = file.getFileName().toString().equals(ZKNODE_DATA_FILE);
+    if (relativePath.length() == 0 && !isNonLeafData) return zkRoot;
 
     // Important to have this check if the source is file:whatever/ and the destination is just zk:/
-    if (zkRoot.endsWith("/") == false) zkRoot += "/";
+    if (!zkRoot.endsWith("/")) {
+      zkRoot += "/";
+    }
 
     String ret = zkRoot + relativePath;
 
@@ -575,32 +561,6 @@ public class ZkMaintenanceUtils {
       }
     }
     return ret;
-  }
-
-  public static final String FORBIDDEN_FILE_TYPES_PROP = "solrConfigSetForbiddenFileTypes";
-  public static final String FORBIDDEN_FILE_TYPES_ENV = "SOLR_CONFIG_SET_FORBIDDEN_FILE_TYPES";
-  public static final Set<String> DEFAULT_FORBIDDEN_FILE_TYPES =
-      Set.of("class", "java", "jar", "tgz", "zip", "tar", "gz");
-  private static volatile Set<String> USE_FORBIDDEN_FILE_TYPES = null;
-
-  public static boolean isFileForbiddenInConfigSets(String filePath) {
-    // Try to set the forbidden file types just once, since it is set by SysProp/EnvVar
-    if (USE_FORBIDDEN_FILE_TYPES == null) {
-      synchronized (DEFAULT_FORBIDDEN_FILE_TYPES) {
-        if (USE_FORBIDDEN_FILE_TYPES == null) {
-          String userForbiddenFileTypes =
-              System.getProperty(
-                  FORBIDDEN_FILE_TYPES_PROP, System.getenv(FORBIDDEN_FILE_TYPES_ENV));
-          if (StrUtils.isNullOrEmpty(userForbiddenFileTypes)) {
-            USE_FORBIDDEN_FILE_TYPES = DEFAULT_FORBIDDEN_FILE_TYPES;
-          } else {
-            USE_FORBIDDEN_FILE_TYPES = Set.of(userForbiddenFileTypes.split(","));
-          }
-        }
-      }
-    }
-    int lastDot = filePath.lastIndexOf('.');
-    return lastDot >= 0 && USE_FORBIDDEN_FILE_TYPES.contains(filePath.substring(lastDot + 1));
   }
 
   /**
@@ -651,11 +611,11 @@ public class ZkMaintenanceUtils {
       int skipPathParts)
       throws KeeperException, InterruptedException {
 
-    if (zkClient.exists(path, true)) {
+    if (zkClient.exists(path)) {
       return;
     }
     try {
-      zkClient.makePath(path, data, createMode, null, true, true, skipPathParts);
+      zkClient.makePath(path, data, createMode, null, true, skipPathParts);
     } catch (NodeExistsException ignored) {
       // it's okay if another beats us creating the node
     }
@@ -679,10 +639,11 @@ public class ZkMaintenanceUtils {
     @Override
     public void visit(String path) throws InterruptedException, KeeperException {
       String finalDestination = dest;
-      if (path.equals(source) == false)
+      if (!path.equals(source)) {
         finalDestination += "/" + path.substring(source.length() + 1);
-      zkClient.makePath(finalDestination, false, true);
-      zkClient.setData(finalDestination, zkClient.getData(path, null, null, true), true);
+      }
+      zkClient.makePath(finalDestination, false);
+      zkClient.setData(finalDestination, zkClient.getData(path, null, null));
     }
   }
 }
