@@ -16,7 +16,6 @@
  */
 package org.apache.solr.common.cloud;
 
-import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySortedSet;
 
 import java.lang.invoke.MethodHandles;
@@ -31,13 +30,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Future;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -47,6 +46,7 @@ import java.util.function.BiFunction;
 import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
+import org.apache.solr.client.api.util.SolrVersion;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.impl.ZkClientClusterStateProvider;
 import org.apache.solr.common.AlreadyClosedException;
@@ -56,9 +56,10 @@ import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.params.CollectionAdminParams;
 import org.apache.solr.common.params.CoreAdminParams;
 import org.apache.solr.common.util.CommonTestInjection;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.ObjectReleaseTracker;
-import org.apache.solr.common.util.SolrNamedThreadFactory;
+import org.apache.solr.common.util.URLUtil;
 import org.apache.solr.common.util.Utils;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.KeeperException.NoNodeException;
@@ -78,7 +79,6 @@ public class ZkStateReader implements SolrCloseable {
   public static final String BASE_URL_PROP = "base_url";
   public static final String NODE_NAME_PROP = "node_name";
   public static final String CORE_NODE_NAME_PROP = "core_node_name";
-  public static final String ROLES_PROP = "roles";
   public static final String STATE_PROP = "state";
   // if this flag equals to false and the replica does not exist in cluster state, set state op
   // become no op (default is true)
@@ -140,6 +140,7 @@ public class ZkStateReader implements SolrCloseable {
   public static final String NRT_REPLICAS = "nrtReplicas";
   public static final String TLOG_REPLICAS = "tlogReplicas";
   public static final String READ_ONLY = "readOnly";
+  public static final String OVERSEER_ENABLED = "overseerEnabled";
 
   public static final String CONFIGS_ZKNODE = "/configs";
   public static final String CONFIGNAME_PROP = "configName";
@@ -156,11 +157,11 @@ public class ZkStateReader implements SolrCloseable {
   public static final String CONTAINER_PLUGINS = "plugin";
 
   public static final String PLACEMENT_PLUGIN = "placement-plugin";
+  private final CollectionPropertiesZkStateReader collectionPropertiesZkStateReader;
 
   /** A view of the current state of all collections. */
   protected volatile ClusterState clusterState;
 
-  private static final int GET_LEADER_RETRY_INTERVAL_MS = 50;
   private static final int GET_LEADER_RETRY_DEFAULT_TIMEOUT =
       Integer.parseInt(System.getProperty("zkReaderGetLeaderRetryTimeoutMs", "4000"));
 
@@ -169,32 +170,25 @@ public class ZkStateReader implements SolrCloseable {
   public static final String SHARD_LEADERS_ZKNODE = "leaders";
   public static final String ELECTION_NODE = "election";
 
+  /** Live node JSON property keys. */
+  public static final String LIVE_NODE_SOLR_VERSION = "solrVersion";
+
+  public static final String LIVE_NODE_NODE_NAME = "nodeName";
+  public static final String LIVE_NODE_ROLES = "roles";
+
   /** "Interesting" but not actively watched Collections. */
   private final ConcurrentHashMap<String, LazyCollectionRef> lazyCollectionStates =
       new ConcurrentHashMap<>();
 
-  /** Collection properties being actively watched */
-  private final ConcurrentHashMap<String, VersionedCollectionProps> watchedCollectionProps =
-      new ConcurrentHashMap<>();
-
-  /** Watchers of Collection properties */
-  private final ConcurrentHashMap<String, PropsWatcher> collectionPropsWatchers =
-      new ConcurrentHashMap<>();
-
   private volatile SortedSet<String> liveNodes = emptySortedSet();
 
-  private volatile Map<String, Object> clusterProperties = Collections.emptyMap();
+  private volatile Map<String, Object> clusterProperties = Map.of();
 
   /**
    * Collections with active watches. The {@link StatefulCollectionWatch} inside for each collection
    * might also contain the latest DocCollection (state) observed
    */
   private DocCollectionWatches collectionWatches = new DocCollectionWatches();
-
-  // named this observers so there's less confusion between CollectionPropsWatcher map and the
-  // PropsWatcher map.
-  private ConcurrentHashMap<String, CollectionWatch<CollectionPropsWatcher>>
-      collectionPropsObservers = new ConcurrentHashMap<>();
 
   private Set<CloudCollectionsListener> cloudCollectionsListeners = ConcurrentHashMap.newKeySet();
 
@@ -204,16 +198,8 @@ public class ZkStateReader implements SolrCloseable {
 
   private Set<ClusterPropertiesListener> clusterPropertiesListeners = ConcurrentHashMap.newKeySet();
 
-  /** Used to submit notifications to Collection Properties watchers in order */
-  private final ExecutorService collectionPropsNotifications =
-      ExecutorUtil.newMDCAwareSingleThreadExecutor(
-          new SolrNamedThreadFactory("collectionPropsNotifications"));
-
   private static final long LAZY_CACHE_TIME =
       TimeUnit.NANOSECONDS.convert(STATE_UPDATE_DELAY, TimeUnit.MILLISECONDS);
-
-  // only kept to identify if the cleaner has already been started.
-  private Future<?> collectionPropsCacheCleaner;
 
   /**
    * Gets the ZkStateReader inside a ZK based SolrClient.
@@ -229,7 +215,7 @@ public class ZkStateReader implements SolrCloseable {
     }
   }
 
-  private static class CollectionWatch<T> {
+  protected static class CollectionWatch<T> {
 
     int coreRefCount = 0;
     Set<T> stateWatchers = ConcurrentHashMap.newKeySet();
@@ -398,7 +384,8 @@ public class ZkStateReader implements SolrCloseable {
           SOLR_ENVIRONMENT,
           CollectionAdminParams.DEFAULTS,
           CONTAINER_PLUGINS,
-          PLACEMENT_PLUGIN);
+          PLACEMENT_PLUGIN,
+          OVERSEER_ENABLED);
 
   private final SolrZkClient zkClient;
 
@@ -417,6 +404,7 @@ public class ZkStateReader implements SolrCloseable {
     this.zkClient = zkClient;
     this.closeClient = false;
     this.securityNodeWatcher = new SecurityNodeWatcher(this, securityNodeListener);
+    collectionPropertiesZkStateReader = new CollectionPropertiesZkStateReader(this);
     assert ObjectReleaseTracker.track(this);
   }
 
@@ -429,32 +417,33 @@ public class ZkStateReader implements SolrCloseable {
       int zkClientTimeout,
       int zkClientConnectTimeout,
       boolean canUseZkACLs) {
-    SolrZkClient.Builder builder =
+    this.zkClient =
         new SolrZkClient.Builder()
             .withUrl(zkServerAddress)
             .withTimeout(zkClientTimeout, TimeUnit.MILLISECONDS)
             .withConnTimeOut(zkClientConnectTimeout, TimeUnit.MILLISECONDS)
             .withUseDefaultCredsAndACLs(canUseZkACLs)
-            .withReconnectListener(
+            .build();
+    this.zkClient
+        .getCuratorFramework()
+        .getConnectionStateListenable()
+        .addListener(
+            (OnReconnect)
                 () -> {
                   // on reconnect, reload cloud info
                   try {
                     this.createClusterStateWatchersAndUpdate();
-                  } catch (KeeperException e) {
-                    log.error("A ZK error has occurred", e);
-                    throw new ZooKeeperException(
-                        ErrorCode.SERVER_ERROR, "A ZK error has occurred", e);
                   } catch (InterruptedException e) {
                     // Restore the interrupted status
                     Thread.currentThread().interrupt();
-                    log.error("Interrupted", e);
-                    throw new ZooKeeperException(ErrorCode.SERVER_ERROR, "Interrupted", e);
+                    log.warn("Interrupted", e);
+                  } catch (Throwable e) {
+                    log.error("An error has occurred while updating the cluster state", e);
                   }
                 });
-    this.zkClient = builder.build();
     this.closeClient = true;
     this.securityNodeWatcher = null;
-
+    collectionPropertiesZkStateReader = new CollectionPropertiesZkStateReader(this);
     assert ObjectReleaseTracker.track(this);
   }
 
@@ -519,7 +508,7 @@ public class ZkStateReader implements SolrCloseable {
           // What do you know, it exists!
           log.debug("Adding lazily-loaded reference for collection {}", collection);
           lazyCollectionStates.putIfAbsent(collection, tryLazyCollection);
-          constructState(Collections.singleton(collection));
+          constructState(Set.of(collection));
         }
       } else if (ref.isLazilyLoaded()) {
         log.debug("Refreshing lazily-loaded state for collection {}", collection);
@@ -531,7 +520,7 @@ public class ZkStateReader implements SolrCloseable {
         log.debug("Forcing refresh of watched collection state for {}", collection);
         DocCollection newState = fetchCollectionState(collection, null);
         if (collectionWatches.updateDocCollection(collection, newState)) {
-          constructState(Collections.singleton(collection));
+          constructState(Set.of(collection));
         }
       } else {
         log.error("Collection {} is not lazy nor watched!", collection);
@@ -556,7 +545,7 @@ public class ZkStateReader implements SolrCloseable {
       if (nu.getZNodeVersion() > collection.getZNodeVersion()) {
         if (collectionWatches.updateDocCollection(coll, nu)) {
           synchronized (getUpdateLock()) {
-            constructState(Collections.singleton(coll));
+            constructState(Set.of(coll));
           }
         }
         collection = nu;
@@ -592,19 +581,20 @@ public class ZkStateReader implements SolrCloseable {
       if (securityNodeWatcher != null) {
         securityNodeWatcher.register();
       }
-
-      collectionPropsObservers.forEach(
-          (k, v) -> {
-            collectionPropsWatchers.computeIfAbsent(k, PropsWatcher::new).refreshAndWatch(true);
-          });
+      collectionPropertiesZkStateReader.refreshCollectionProperties();
     } catch (KeeperException.NoNodeException nne) {
+      String noNodePath = nne.getPath();
+      if (noNodePath.length() > zkClient.getCuratorFramework().getNamespace().length()) {
+        noNodePath =
+            noNodePath.substring(zkClient.getCuratorFramework().getNamespace().length() + 1);
+      }
       throw new SolrException(
           ErrorCode.SERVICE_UNAVAILABLE,
           "Cannot connect to cluster at "
               + zkClient.getZkServerAddress()
               + ": cluster not found/not ready."
               + " Expected node '"
-              + nne.getPath()
+              + noNodePath
               + "' does not exist.");
     }
   }
@@ -645,7 +635,7 @@ public class ZkStateReader implements SolrCloseable {
           collectionWatches.watchedCollections().size(),
           collectionWatches.activeCollectionCount(),
           lazyCollectionStates.keySet().size(),
-          clusterState.getCollectionStates().size());
+          clusterState.size());
     }
 
     if (log.isTraceEnabled()) {
@@ -654,7 +644,7 @@ public class ZkStateReader implements SolrCloseable {
           collectionWatches.watchedCollections(),
           collectionWatches.activeCollections(),
           lazyCollectionStates.keySet(),
-          clusterState.getCollectionStates());
+          clusterState.collectionStream().toList());
     }
 
     notifyCloudCollectionsListeners();
@@ -681,7 +671,7 @@ public class ZkStateReader implements SolrCloseable {
     synchronized (refreshCollectionListLock) {
       List<String> children = null;
       try {
-        children = zkClient.getChildren(COLLECTIONS_ZKNODE, watcher, true);
+        children = zkClient.getChildren(COLLECTIONS_ZKNODE, watcher);
       } catch (KeeperException.NoNodeException e) {
         log.warn("Error fetching collection names: ", e);
         // fall through
@@ -729,7 +719,7 @@ public class ZkStateReader implements SolrCloseable {
   }
 
   private void notifyNewCloudCollectionsListener(CloudCollectionsListener listener) {
-    listener.onChange(Collections.emptySet(), lastFetchedCollectionSet.get());
+    listener.onChange(Set.of(), lastFetchedCollectionSet.get());
   }
 
   private void notifyCloudCollectionsListeners() {
@@ -775,7 +765,8 @@ public class ZkStateReader implements SolrCloseable {
         if (cachedDocCollection != null) {
           Stat freshStats = null;
           try {
-            freshStats = zkClient.exists(DocCollection.getCollectionPath(collName), null, true);
+            freshStats = zkClient.exists(DocCollection.getCollectionPath(collName), null);
+            lastUpdateTime = System.nanoTime();
           } catch (Exception e) {
           }
           if (freshStats != null
@@ -813,9 +804,9 @@ public class ZkStateReader implements SolrCloseable {
     synchronized (refreshLiveNodesLock) {
       SortedSet<String> newLiveNodes;
       try {
-        List<String> nodeList = zkClient.getChildren(LIVE_NODES_ZKNODE, watcher, true);
+        List<String> nodeList = zkClient.getChildren(LIVE_NODES_ZKNODE, watcher);
         newLiveNodes = new TreeSet<>(nodeList);
-      } catch (KeeperException.NoNodeException e) {
+      } catch (KeeperException.NoNodeException | AlreadyClosedException e) {
         newLiveNodes = emptySortedSet();
       }
       lastFetchedLiveNodes.set(newLiveNodes);
@@ -886,6 +877,43 @@ public class ZkStateReader implements SolrCloseable {
   }
 
   /**
+   * Returns the lowest Solr version among all live nodes in the cluster. If older Solr nodes have
+   * joined that don't declare their version, the result won't be accurate, but it's at least an
+   * upper bound on the possible version it might be.
+   *
+   * @return an Optional containing the lowest Solr version of nodes in the cluster, or empty if no
+   *     live nodes exist or all nodes return 9.9.0 for unspecified versions
+   */
+  public Optional<SolrVersion> fetchLowestSolrVersion()
+      throws KeeperException, InterruptedException {
+    List<String> liveNodeNames = zkClient.getChildren(LIVE_NODES_ZKNODE, null);
+    SolrVersion lowest = null;
+    // the last version to not specify its version in live nodes
+    final SolrVersion UNSPECIFIED_VERSION = SolrVersion.valueOf("9.9.0");
+
+    for (String nodeName : liveNodeNames) {
+      String path = LIVE_NODES_ZKNODE + "/" + nodeName;
+      byte[] data = zkClient.getData(path, null, null);
+      if (data == null || data.length == 0) {
+        return Optional.of(UNSPECIFIED_VERSION);
+      }
+
+      @SuppressWarnings("unchecked")
+      Map<String, Object> props = (Map<String, Object>) Utils.fromJSON(data);
+      String nodeVersionStr = (String) props.get(LIVE_NODE_SOLR_VERSION);
+      if (nodeVersionStr == null) { // weird
+        log.warn("No Solr version found: {}", props);
+        return Optional.of(UNSPECIFIED_VERSION);
+      }
+      SolrVersion nodeVersion = SolrVersion.valueOf(nodeVersionStr);
+      if (lowest == null || nodeVersion.compareTo(lowest) < 0) {
+        lowest = nodeVersion;
+      }
+    }
+    return Optional.ofNullable(lowest);
+  }
+
+  /**
    * @return information about the cluster from ZooKeeper
    */
   public ClusterState getClusterState() {
@@ -894,6 +922,10 @@ public class ZkStateReader implements SolrCloseable {
 
   public Object getUpdateLock() {
     return this;
+  }
+
+  public SolrZkClient getZKClient() {
+    return zkClient;
   }
 
   @Override
@@ -909,7 +941,7 @@ public class ZkStateReader implements SolrCloseable {
             });
 
     ExecutorUtil.shutdownAndAwaitTermination(notifications);
-    ExecutorUtil.shutdownAndAwaitTermination(collectionPropsNotifications);
+    collectionPropertiesZkStateReader.close();
     if (closeClient) {
       zkClient.close();
     }
@@ -927,8 +959,7 @@ public class ZkStateReader implements SolrCloseable {
     if (replica == null || replica.getBaseUrl() == null) {
       return null;
     }
-    ZkCoreNodeProps props = new ZkCoreNodeProps(replica);
-    return props.getCoreUrl();
+    return replica.getCoreUrl();
   }
 
   public Replica getLeader(Set<String> liveNodes, DocCollection docCollection, String shard) {
@@ -1017,37 +1048,18 @@ public class ZkStateReader implements SolrCloseable {
         + (shardId != null ? ("/" + shardId + "/" + ELECTION_NODE) : "");
   }
 
-  public List<ZkCoreNodeProps> getReplicaProps(
-      String collection, String shardId, String thisCoreNodeName) {
-    return getReplicaProps(collection, shardId, thisCoreNodeName, null);
-  }
-
-  public List<ZkCoreNodeProps> getReplicaProps(
-      String collection,
-      String shardId,
-      String thisCoreNodeName,
-      Replica.State mustMatchStateFilter) {
-    return getReplicaProps(collection, shardId, thisCoreNodeName, mustMatchStateFilter, null);
-  }
-
-  public List<ZkCoreNodeProps> getReplicaProps(
-      String collection,
-      String shardId,
-      String thisCoreNodeName,
-      Replica.State mustMatchStateFilter,
-      Replica.State mustNotMatchStateFilter) {
-    // TODO: We don't need all these getReplicaProps method overloading. Also, it's odd that the
-    // default is to return replicas of type TLOG and NRT only
-    return getReplicaProps(
+  public List<Replica> getReplicas(String collection, String shardId, String thisCoreNodeName) {
+    // TODO: It's odd that the default is to return replicas of type TLOG and NRT only
+    return getReplicas(
         collection,
         shardId,
         thisCoreNodeName,
-        mustMatchStateFilter,
+        null,
         null,
         EnumSet.of(Replica.Type.TLOG, Replica.Type.NRT));
   }
 
-  public List<ZkCoreNodeProps> getReplicaProps(
+  public List<Replica> getReplicas(
       String collection,
       String shardId,
       String thisCoreNodeName,
@@ -1066,39 +1078,37 @@ public class ZkStateReader implements SolrCloseable {
     }
 
     Map<String, Slice> slices = docCollection.getSlicesMap();
-    Slice replicas = slices.get(shardId);
-    if (replicas == null) {
+    Slice shard = slices.get(shardId);
+    if (shard == null) {
       throw new ZooKeeperException(
           ErrorCode.BAD_REQUEST, "Could not find shardId in zk: " + shardId);
     }
 
-    Map<String, Replica> shardMap = replicas.getReplicasMap();
-    List<ZkCoreNodeProps> nodes = new ArrayList<>(shardMap.size());
+    Map<String, Replica> shardMap = shard.getReplicasMap();
+    List<Replica> replicas = new ArrayList<>(shardMap.size());
     for (Entry<String, Replica> entry :
         shardMap.entrySet().stream()
             .filter((e) -> acceptReplicaType.contains(e.getValue().getType()))
             .collect(Collectors.toList())) {
-      ZkCoreNodeProps nodeProps = new ZkCoreNodeProps(entry.getValue());
+      Replica replica = entry.getValue();
 
       String coreNodeName = entry.getValue().getName();
 
-      if (clusterState.liveNodesContain(nodeProps.getNodeName())
+      if (clusterState.liveNodesContain(replica.getNodeName())
           && !coreNodeName.equals(thisCoreNodeName)) {
-        if (mustMatchStateFilter == null
-            || mustMatchStateFilter == Replica.State.getState(nodeProps.getState())) {
-          if (mustNotMatchStateFilter == null
-              || mustNotMatchStateFilter != Replica.State.getState(nodeProps.getState())) {
-            nodes.add(nodeProps);
+        if (mustMatchStateFilter == null || mustMatchStateFilter == replica.getState()) {
+          if (mustNotMatchStateFilter == null || mustNotMatchStateFilter != replica.getState()) {
+            replicas.add(replica);
           }
         }
       }
     }
-    if (nodes.size() == 0) {
+    if (replicas.size() == 0) {
       // no replicas
       return null;
     }
 
-    return nodes;
+    return replicas;
   }
 
   public SolrZkClient getZkClient() {
@@ -1166,8 +1176,7 @@ public class ZkStateReader implements SolrCloseable {
       while (true) {
         try {
           byte[] data =
-              zkClient.getData(
-                  ZkStateReader.CLUSTER_PROPS, clusterPropertiesWatcher, new Stat(), true);
+              zkClient.getData(ZkStateReader.CLUSTER_PROPS, clusterPropertiesWatcher, new Stat());
           this.clusterProperties = (Map<String, Object>) Utils.fromJSON(data);
           log.debug("Loaded cluster properties: {}", this.clusterProperties);
 
@@ -1176,11 +1185,11 @@ public class ZkStateReader implements SolrCloseable {
           }
           return;
         } catch (KeeperException.NoNodeException e) {
-          this.clusterProperties = Collections.emptyMap();
+          this.clusterProperties = Map.of();
           log.debug("Loaded empty cluster properties");
           // set an exists watch, and if the node has been created since the last call,
           // read the data again
-          if (zkClient.exists(ZkStateReader.CLUSTER_PROPS, clusterPropertiesWatcher, true) == null)
+          if (zkClient.exists(ZkStateReader.CLUSTER_PROPS, clusterPropertiesWatcher) == null)
             return;
         }
       }
@@ -1190,131 +1199,18 @@ public class ZkStateReader implements SolrCloseable {
     }
   }
 
-  /**
-   * Get collection properties for a given collection. If the collection is watched, simply return
-   * it from the cache, otherwise fetch it directly from zookeeper. This is a convenience for {@code
-   * getCollectionProperties(collection,0)}
-   *
-   * @param collection the collection for which properties are desired
-   * @return a map representing the key/value properties for the collection.
-   */
+  /** Get properties for a specific collection */
   public Map<String, String> getCollectionProperties(final String collection) {
-    return getCollectionProperties(collection, 0);
+    return collectionPropertiesZkStateReader.getCollectionProperties(collection, 0);
   }
 
-  /**
-   * Get and cache collection properties for a given collection. If the collection is watched, or
-   * still cached simply return it from the cache, otherwise fetch it directly from zookeeper and
-   * retain the value for at least cacheForMillis milliseconds. Cached properties are watched in
-   * zookeeper and updated automatically. This version of {@code getCollectionProperties} should be
-   * used when properties need to be consulted frequently in the absence of an active {@link
-   * CollectionPropsWatcher}.
-   *
-   * @param collection The collection for which properties are desired
-   * @param cacheForMillis The minimum number of milliseconds to maintain a cache for the specified
-   *     collection's properties. Setting a {@code CollectionPropsWatcher} will override this value
-   *     and retain the cache for the life of the watcher. A lack of changes in zookeeper may allow
-   *     the caching to remain for a greater duration up to the cycle time of {@code CacheCleaner}.
-   *     Passing zero for this value will explicitly remove the cached copy if and only if it is due
-   *     to expire and no watch exists. Any positive value will extend the expiration time if
-   *     required.
-   * @return a map representing the key/value properties for the collection.
-   */
+  /** Get and cache collection properties for a given collection */
   public Map<String, String> getCollectionProperties(final String collection, long cacheForMillis) {
-    synchronized (watchedCollectionProps) { // making decisions based on the result of a get...
-      Watcher watcher = null;
-      if (cacheForMillis > 0) {
-        watcher =
-            collectionPropsWatchers.compute(
-                collection,
-                (c, w) ->
-                    w == null ? new PropsWatcher(c, cacheForMillis) : w.renew(cacheForMillis));
-      }
-      VersionedCollectionProps vprops = watchedCollectionProps.get(collection);
-      boolean haveUnexpiredProps = vprops != null && vprops.cacheUntilNs > System.nanoTime();
-      long untilNs =
-          System.nanoTime() + TimeUnit.NANOSECONDS.convert(cacheForMillis, TimeUnit.MILLISECONDS);
-      Map<String, String> properties;
-      if (haveUnexpiredProps) {
-        properties = vprops.props;
-        vprops.cacheUntilNs = Math.max(vprops.cacheUntilNs, untilNs);
-      } else {
-        try {
-          VersionedCollectionProps vcp = fetchCollectionProperties(collection, watcher);
-          properties = vcp.props;
-          if (cacheForMillis > 0) {
-            vcp.cacheUntilNs = untilNs;
-            watchedCollectionProps.put(collection, vcp);
-          } else {
-            // we're synchronized on watchedCollectionProps and we can only get here if we have
-            // found an expired vprops above, so it is safe to remove the cached value and let the
-            // GC free up some mem a bit sooner.
-            if (!collectionPropsObservers.containsKey(collection)) {
-              watchedCollectionProps.remove(collection);
-            }
-          }
-        } catch (Exception e) {
-          throw new SolrException(
-              ErrorCode.SERVER_ERROR,
-              "Error reading collection properties",
-              SolrZkClient.checkInterrupted(e));
-        }
-      }
-      return properties;
-    }
-  }
-
-  private static class VersionedCollectionProps {
-    int zkVersion;
-    Map<String, String> props;
-    long cacheUntilNs = 0;
-
-    VersionedCollectionProps(int zkVersion, Map<String, String> props) {
-      this.zkVersion = zkVersion;
-      this.props = props;
-    }
+    return collectionPropertiesZkStateReader.getCollectionProperties(collection, cacheForMillis);
   }
 
   static String getCollectionPropsPath(final String collection) {
-    return COLLECTIONS_ZKNODE + '/' + collection + '/' + COLLECTION_PROPS_ZKNODE;
-  }
-
-  private VersionedCollectionProps fetchCollectionProperties(String collection, Watcher watcher)
-      throws KeeperException, InterruptedException {
-    final String znodePath = getCollectionPropsPath(collection);
-    // lazy init cache cleaner once we know someone is using collection properties.
-    if (collectionPropsCacheCleaner == null) {
-      synchronized (this) { // There can be only one! :)
-        if (collectionPropsCacheCleaner == null) {
-          collectionPropsCacheCleaner = notifications.submit(new CacheCleaner());
-        }
-      }
-    }
-    while (true) {
-      try {
-        Stat stat = new Stat();
-        byte[] data = zkClient.getData(znodePath, watcher, stat, true);
-        @SuppressWarnings("unchecked")
-        Map<String, String> props = (Map<String, String>) Utils.fromJSON(data);
-        return new VersionedCollectionProps(stat.getVersion(), props);
-      } catch (ClassCastException e) {
-        throw new SolrException(
-            ErrorCode.SERVER_ERROR,
-            "Unable to parse collection properties for collection " + collection,
-            e);
-      } catch (KeeperException.NoNodeException e) {
-        if (watcher != null) {
-          // Leave an exists watch in place in case a collectionprops.json is created later.
-          Stat exists = zkClient.exists(znodePath, watcher, true);
-          if (exists != null) {
-            // Rare race condition, we tried to fetch the data and couldn't find it, then we found
-            // it exists. Loop and try again.
-            continue;
-          }
-        }
-        return new VersionedCollectionProps(-1, emptyMap());
-      }
-    }
+    return CollectionPropertiesZkStateReader.getCollectionPropsPath(collection);
   }
 
   /**
@@ -1322,7 +1218,7 @@ public class ZkStateReader implements SolrCloseable {
    * returns null.
    */
   public ConfigData getSecurityProps(boolean getFresh) {
-    if (securityNodeWatcher == null) return new ConfigData(emptyMap(), -1);
+    if (securityNodeWatcher == null) return new ConfigData(Map.of(), -1);
     return securityNodeWatcher.getSecurityProps(getFresh);
   }
 
@@ -1334,8 +1230,7 @@ public class ZkStateReader implements SolrCloseable {
    * @return url that looks like {@code https://localhost:8983/solr}
    */
   public String getBaseUrlForNodeName(final String nodeName) {
-    String urlScheme = getClusterProperty(URL_SCHEME, "http");
-    return Utils.getBaseUrlForNodeName(nodeName, urlScheme, false);
+    return URLUtil.getBaseUrlForNodeName(nodeName, getUrlScheme(), false);
   }
 
   /**
@@ -1346,8 +1241,20 @@ public class ZkStateReader implements SolrCloseable {
    * @return url that looks like {@code https://localhost:8983/api}
    */
   public String getBaseUrlV2ForNodeName(final String nodeName) {
-    String urlScheme = getClusterProperty(URL_SCHEME, "http");
-    return Utils.getBaseUrlForNodeName(nodeName, urlScheme, true);
+    return URLUtil.getBaseUrlForNodeName(nodeName, getUrlScheme(), true);
+  }
+
+  /**
+   * Returns the URL scheme for hosts in the cluster.
+   *
+   * @return the URL scheme ("http" or "https")
+   */
+  public String getUrlScheme() {
+    final Boolean isSolrSslEnabled = EnvUtils.getPropertyAsBool("solr.ssl.enabled");
+    if (isSolrSslEnabled != null) {
+      return isSolrSslEnabled ? "https" : "http";
+    }
+    return getClusterProperty(URL_SCHEME, "http");
   }
 
   /** Watches a single collection's state.json. */
@@ -1408,7 +1315,7 @@ public class ZkStateReader implements SolrCloseable {
         DocCollection newState = fetchCollectionState(coll, this);
         collectionWatches.updateDocCollection(coll, newState);
         synchronized (getUpdateLock()) {
-          constructState(Collections.singleton(coll));
+          constructState(Set.of(coll));
         }
 
       } catch (KeeperException.SessionExpiredException
@@ -1427,7 +1334,7 @@ public class ZkStateReader implements SolrCloseable {
       Stat stat = new Stat();
       List<String> replicaStates = null;
       try {
-        replicaStates = zkClient.getChildren(collectionPath, this, stat, true);
+        replicaStates = zkClient.getChildren(collectionPath, this, stat);
         PerReplicaStates newStates =
             new PerReplicaStates(collectionPath, stat.getCversion(), replicaStates);
         DocCollection oldState = collectionWatches.getDocCollection(coll);
@@ -1437,7 +1344,7 @@ public class ZkStateReader implements SolrCloseable {
                 : fetchCollectionState(coll, null);
         collectionWatches.updateDocCollection(coll, newState);
         synchronized (getUpdateLock()) {
-          constructState(Collections.singleton(coll));
+          constructState(Set.of(coll));
         }
         if (log.isDebugEnabled()) {
           log.debug(
@@ -1449,101 +1356,6 @@ public class ZkStateReader implements SolrCloseable {
 
       } catch (NoNodeException e) {
         log.info("{} is deleted, stop watching children", collectionPath);
-      }
-    }
-  }
-
-  /** Watches collection properties */
-  class PropsWatcher implements Watcher {
-    private final String coll;
-    private long watchUntilNs;
-
-    PropsWatcher(String coll) {
-      this.coll = coll;
-      watchUntilNs = 0;
-    }
-
-    PropsWatcher(String coll, long forMillis) {
-      this.coll = coll;
-      watchUntilNs =
-          System.nanoTime() + TimeUnit.NANOSECONDS.convert(forMillis, TimeUnit.MILLISECONDS);
-    }
-
-    public PropsWatcher renew(long forMillis) {
-      watchUntilNs =
-          System.nanoTime() + TimeUnit.NANOSECONDS.convert(forMillis, TimeUnit.MILLISECONDS);
-      return this;
-    }
-
-    @Override
-    public void process(WatchedEvent event) {
-      // session events are not change events, and do not remove the watcher
-      if (EventType.None.equals(event.getType())) {
-        return;
-      }
-
-      boolean expired = System.nanoTime() > watchUntilNs;
-      if (!collectionPropsObservers.containsKey(coll) && expired) {
-        // No one can be notified of the change, we can ignore it and "unset" the watch
-        log.debug("Ignoring property change for collection {}", coll);
-        return;
-      }
-
-      log.info(
-          "A collection property change: [{}] for collection [{}] has occurred - updating...",
-          event,
-          coll);
-
-      refreshAndWatch(true);
-    }
-
-    /**
-     * Refresh collection properties from ZK and leave a watch for future changes. Updates the
-     * properties in watchedCollectionProps with the results of the refresh. Optionally notifies
-     * watchers
-     */
-    void refreshAndWatch(boolean notifyWatchers) {
-      try {
-        synchronized (watchedCollectionProps) { // making decisions based on the result of a get...
-          VersionedCollectionProps vcp = fetchCollectionProperties(coll, this);
-          Map<String, String> properties = vcp.props;
-          VersionedCollectionProps existingVcp = watchedCollectionProps.get(coll);
-          if (existingVcp == null
-              || // never called before, record what we found
-              vcp.zkVersion > existingVcp.zkVersion
-              || // newer info we should update
-              vcp.zkVersion == -1) { // node was deleted start over
-            watchedCollectionProps.put(coll, vcp);
-            if (notifyWatchers) {
-              notifyPropsWatchers(coll, properties);
-            }
-            if (vcp.zkVersion == -1 && existingVcp != null) { // Collection DELETE detected
-
-              // We should not be caching a collection that has been deleted.
-              watchedCollectionProps.remove(coll);
-
-              // core ref counting not relevant here, don't need canRemove(), we just sent
-              // a notification of an empty set of properties, no reason to watch what doesn't
-              // exist.
-              collectionPropsObservers.remove(coll);
-
-              // This is the one time we know it's safe to throw this out. We just failed to set the
-              // watch due to an NoNodeException, so it isn't held by ZK and can't re-set itself due
-              // to an update.
-              collectionPropsWatchers.remove(coll);
-            }
-          }
-        }
-      } catch (KeeperException.SessionExpiredException
-          | KeeperException.ConnectionLossException e) {
-        log.warn("ZooKeeper watch triggered, but Solr cannot talk to ZK: ", e);
-      } catch (KeeperException e) {
-        log.error("Lost collection property watcher for {} due to ZK error", coll, e);
-        throw new ZooKeeperException(ErrorCode.SERVER_ERROR, "A ZK error has occurred", e);
-      } catch (InterruptedException e) {
-        Thread.currentThread().interrupt();
-        log.error(
-            "Lost collection property watcher for {} due to the thread being interrupted", coll, e);
       }
     }
   }
@@ -1564,7 +1376,7 @@ public class ZkStateReader implements SolrCloseable {
       log.debug("A collections change: [{}], has occurred - updating...", event);
       refreshAndWatch();
       synchronized (getUpdateLock()) {
-        constructState(Collections.emptySet());
+        constructState(Set.of());
       }
     }
 
@@ -1636,32 +1448,29 @@ public class ZkStateReader implements SolrCloseable {
     }
   }
 
+  @SuppressWarnings("unchecked")
   private DocCollection fetchCollectionState(String coll, Watcher watcher)
       throws KeeperException, InterruptedException {
     String collectionPath = DocCollection.getCollectionPath(coll);
     while (true) {
       try {
         Stat stat = new Stat();
-        byte[] data = zkClient.getData(collectionPath, watcher, stat, true);
+        byte[] data = zkClient.getData(collectionPath, watcher, stat);
+        Map<String, Object> stateMap = (Map<String, Object>) Utils.fromJSON(data);
 
-        // This factory method can detect a missing configName and supply it by reading it from the
-        // old ZK location.
-        // TODO in Solr 10 remove that factory method
-        ClusterState state =
-            ZkClientClusterStateProvider.createFromJsonSupportingLegacyConfigName(
+        final var state =
+            ClusterState.createFromCollectionMap(
                 stat.getVersion(),
-                data,
-                Collections.emptySet(),
-                coll,
-                zkClient,
-                Instant.ofEpochMilli(stat.getCtime()));
-
-        ClusterState.CollectionRef collectionRef = state.getCollectionStates().get(coll);
-        return collectionRef == null ? null : collectionRef.get();
+                stateMap,
+                liveNodes,
+                Instant.ofEpochMilli(stat.getCtime()),
+                PerReplicaStatesOps.getZkClientPrsSupplier(
+                    zkClient, DocCollection.getCollectionPath(coll)));
+        return state.getCollectionOrNull(coll);
       } catch (KeeperException.NoNodeException e) {
         if (watcher != null) {
           // Leave an exists watch in place in case a state.json is created later.
-          Stat exists = zkClient.exists(collectionPath, watcher, true);
+          Stat exists = zkClient.exists(collectionPath, watcher);
           if (exists != null) {
             // Rare race condition, we tried to fetch the data and couldn't find it, then we found
             // it exists. Loop and try again.
@@ -1674,7 +1483,7 @@ public class ZkStateReader implements SolrCloseable {
             ZkStateReader.class.getName() + "/exercised", e);
         // could be a race condition that state.json and PRS entries are deleted between the
         // state.json fetch and PRS entry fetch
-        Stat exists = zkClient.exists(collectionPath, watcher, true);
+        Stat exists = zkClient.exists(collectionPath, watcher);
         if (exists == null) {
           log.info(
               "PRS entry for collection {} not found in ZK. It was probably deleted between state.json read and PRS entry read.",
@@ -1755,7 +1564,7 @@ public class ZkStateReader implements SolrCloseable {
         });
     if (reconstructState.get()) {
       synchronized (getUpdateLock()) {
-        constructState(Collections.emptySet());
+        constructState(Set.of());
       }
     }
   }
@@ -1863,12 +1672,25 @@ public class ZkStateReader implements SolrCloseable {
 
     final CountDownLatch latch = new CountDownLatch(1);
     waitLatches.add(latch);
-    AtomicReference<DocCollection> docCollection = new AtomicReference<>();
+    final AtomicReference<DocCollection> docCollection = new AtomicReference<>();
+    final AtomicReference<SolrException> thrownException = new AtomicReference<>();
     CollectionStateWatcher watcher =
         (n, c) -> {
           docCollection.set(c);
-          boolean matches = predicate.matches(n, c);
-          if (matches) latch.countDown();
+          boolean matches = false;
+          try {
+            matches = predicate.matches(n, c);
+            if (matches) {
+              latch.countDown();
+              thrownException.set(null);
+            }
+          } catch (SolrException e) {
+            if (thrownException.getAndSet(e) != null) {
+              // Return if we have seen an exception twice
+              latch.countDown();
+              matches = true;
+            }
+          }
 
           return matches;
         };
@@ -1876,13 +1698,18 @@ public class ZkStateReader implements SolrCloseable {
     try {
       registerCollectionStateWatcher(collection, watcher);
       // wait for the watcher predicate to return true, or time out
-      if (!latch.await(wait, unit))
+      if (!latch.await(wait, unit)) {
         throw new TimeoutException(
             "Timeout waiting to see state for collection="
                 + collection
                 + " :"
                 + docCollection.get());
-
+      } else if (thrownException.get() != null) {
+        throw new SolrException(
+            SolrException.ErrorCode.SERVER_ERROR,
+            "Error occurred while checking state",
+            thrownException.get());
+      }
     } finally {
       removeCollectionStateWatcher(collection, watcher);
       waitLatches.remove(latch);
@@ -2043,7 +1870,7 @@ public class ZkStateReader implements SolrCloseable {
         });
     if (reconstructState.get()) {
       synchronized (getUpdateLock()) {
-        constructState(Collections.emptySet());
+        constructState(Set.of());
       }
     }
   }
@@ -2069,38 +1896,12 @@ public class ZkStateReader implements SolrCloseable {
 
   public void registerCollectionPropsWatcher(
       final String collection, CollectionPropsWatcher propsWatcher) {
-    AtomicBoolean watchSet = new AtomicBoolean(false);
-    collectionPropsObservers.compute(
-        collection,
-        (k, v) -> {
-          if (v == null) {
-            v = new CollectionWatch<>();
-            watchSet.set(true);
-          }
-          v.stateWatchers.add(propsWatcher);
-          return v;
-        });
 
-    if (watchSet.get()) {
-      collectionPropsWatchers.computeIfAbsent(collection, PropsWatcher::new).refreshAndWatch(false);
-    }
+    collectionPropertiesZkStateReader.registerCollectionPropsWatcher(collection, propsWatcher);
   }
 
   public void removeCollectionPropsWatcher(String collection, CollectionPropsWatcher watcher) {
-    collectionPropsObservers.compute(
-        collection,
-        (k, v) -> {
-          if (v == null) return null;
-          v.stateWatchers.remove(watcher);
-          if (v.canBeRemoved()) {
-            // don't want this to happen in middle of other blocks that might add it back.
-            synchronized (watchedCollectionProps) {
-              watchedCollectionProps.remove(collection);
-            }
-            return null;
-          }
-          return v;
-        });
+    collectionPropertiesZkStateReader.removeCollectionPropsWatcher(collection, watcher);
   }
 
   public static class ConfigData {
@@ -2120,7 +1921,7 @@ public class ZkStateReader implements SolrCloseable {
       return;
     }
     try {
-      notifications.submit(new Notification(collection, collectionState));
+      notifications.execute(new Notification(collection, collectionState));
     } catch (RejectedExecutionException e) {
       if (closed == false) {
         log.error("Couldn't run collection notifications for {}", collection, e);
@@ -2185,8 +1986,8 @@ public class ZkStateReader implements SolrCloseable {
   // called by createClusterStateWatchersAndUpdate()
   private void refreshAliases(AliasesManager watcher) throws KeeperException, InterruptedException {
     synchronized (getUpdateLock()) {
-      constructState(Collections.emptySet());
-      zkClient.exists(ALIASES, watcher, true);
+      constructState(Set.of());
+      zkClient.exists(ALIASES, watcher);
     }
     aliasesManager.update();
   }
@@ -2245,7 +2046,7 @@ public class ZkStateReader implements SolrCloseable {
         try {
           try {
             final Stat stat =
-                getZkClient().setData(ALIASES, modAliasesJson, curAliases.getZNodeVersion(), true);
+                getZkClient().setData(ALIASES, modAliasesJson, curAliases.getZNodeVersion());
             setIfNewer(new SolrZkClient.NodeData(stat, modAliasesJson));
             return;
           } catch (KeeperException.BadVersionException e) {
@@ -2287,8 +2088,9 @@ public class ZkStateReader implements SolrCloseable {
         log.debug("Checking ZK for most up to date Aliases {}", ALIASES);
       }
       // Call sync() first to ensure the subsequent read (getData) is up-to-date.
-      zkClient.getZooKeeper().sync(ALIASES, null, null);
-      return setIfNewer(zkClient.getNode(ALIASES, null, true));
+      zkClient.runWithCorrectThrows(
+          "syncing aliases", () -> zkClient.getCuratorFramework().sync().forPath(ALIASES));
+      return setIfNewer(zkClient.getNode(ALIASES, null));
     }
 
     // ZK Watcher interface
@@ -2302,7 +2104,7 @@ public class ZkStateReader implements SolrCloseable {
         log.debug("Aliases: updating");
 
         // re-register the watch
-        setIfNewer(zkClient.getNode(ALIASES, this, true));
+        setIfNewer(zkClient.getNode(ALIASES, this));
       } catch (NoNodeException e) {
         // /aliases.json will not always exist
       } catch (KeeperException.ConnectionLossException
@@ -2352,66 +2154,6 @@ public class ZkStateReader implements SolrCloseable {
     }
   }
 
-  private void notifyPropsWatchers(String collection, Map<String, String> properties) {
-    try {
-      collectionPropsNotifications.submit(new PropsNotification(collection, properties));
-    } catch (RejectedExecutionException e) {
-      if (!closed) {
-        log.error("Couldn't run collection properties notifications for {}", collection, e);
-      }
-    }
-  }
-
-  private class PropsNotification implements Runnable {
-
-    private final String collection;
-    private final Map<String, String> collectionProperties;
-    private final List<CollectionPropsWatcher> watchers = new ArrayList<>();
-
-    private PropsNotification(String collection, Map<String, String> collectionProperties) {
-      this.collection = collection;
-      this.collectionProperties = collectionProperties;
-      // guarantee delivery of notification regardless of what happens to collectionPropsObservers
-      // while we wait our turn in the executor by capturing the list on creation.
-      collectionPropsObservers.compute(
-          collection,
-          (k, v) -> {
-            if (v == null) return null;
-            watchers.addAll(v.stateWatchers);
-            return v;
-          });
-    }
-
-    @Override
-    public void run() {
-      for (CollectionPropsWatcher watcher : watchers) {
-        if (watcher.onStateChanged(collectionProperties)) {
-          removeCollectionPropsWatcher(collection, watcher);
-        }
-      }
-    }
-  }
-
-  private class CacheCleaner implements Runnable {
-    @Override
-    public void run() {
-      while (!Thread.interrupted()) {
-        try {
-          Thread.sleep(60000);
-        } catch (InterruptedException e) {
-          // Executor shutdown will send us an interrupt
-          break;
-        }
-        watchedCollectionProps
-            .entrySet()
-            .removeIf(
-                entry ->
-                    entry.getValue().cacheUntilNs < System.nanoTime()
-                        && !collectionPropsObservers.containsKey(entry.getKey()));
-      }
-    }
-  }
-
   /**
    * Helper class that acts as both a {@link DocCollectionWatcher} and a {@link LiveNodesListener}
    * while wraping and delegating to a {@link CollectionStateWatcher}
@@ -2428,9 +2170,7 @@ public class ZkStateReader implements SolrCloseable {
 
     @Override
     public boolean equals(Object other) {
-      if (other instanceof DocCollectionAndLiveNodesWatcherWrapper) {
-        DocCollectionAndLiveNodesWatcherWrapper that =
-            (DocCollectionAndLiveNodesWatcherWrapper) other;
+      if (other instanceof DocCollectionAndLiveNodesWatcherWrapper that) {
         return this.collectionName.equals(that.collectionName)
             && this.delegate.equals(that.delegate);
       }
