@@ -29,17 +29,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.DocCollection.CollectionStateProps;
-import org.apache.solr.common.cloud.Replica.ReplicaStateProps;
 import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.Utils;
 import org.noggit.JSONParser;
@@ -52,6 +49,8 @@ import org.slf4j.LoggerFactory;
  * Immutable state of the cloud. Normally you can get the state by using {@code
  * ZkStateReader#getClusterState()}.
  *
+ * <p>However, the {@link #setLiveNodes list of live nodes} is updated when nodes go up and down.
+ *
  * @lucene.experimental
  */
 public class ClusterState implements MapWriter {
@@ -62,8 +61,7 @@ public class ClusterState implements MapWriter {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private final Map<String, CollectionRef> collectionStates, immutableCollectionStates;
-  private Set<String> liveNodes;
-  private Set<String> hostAllowList;
+  private volatile Set<String> liveNodes;
 
   /** Use this constr when ClusterState is meant for consumption. */
   public ClusterState(Set<String> liveNodes, Map<String, DocCollection> collectionStates) {
@@ -84,8 +82,7 @@ public class ClusterState implements MapWriter {
    * loaded (parameter order different from constructor above to have different erasures)
    */
   public ClusterState(Map<String, CollectionRef> collectionStates, Set<String> liveNodes) {
-    this.liveNodes = CollectionUtil.newHashSet(liveNodes.size());
-    this.liveNodes.addAll(liveNodes);
+    setLiveNodes(liveNodes);
     this.collectionStates = new LinkedHashMap<>(collectionStates);
     this.immutableCollectionStates = Collections.unmodifiableMap(this.collectionStates);
   }
@@ -96,6 +93,7 @@ public class ClusterState implements MapWriter {
    * @param collectionName the name of the modified (or deleted) collection
    * @param collection the collection object. A null value deletes the collection from the state
    * @return the updated cluster state which preserves the current live nodes
+   * @lucene.internal
    */
   public ClusterState copyWith(String collectionName, DocCollection collection) {
     LinkedHashMap<String, CollectionRef> collections = new LinkedHashMap<>(collectionStates);
@@ -155,62 +153,21 @@ public class ClusterState implements MapWriter {
   }
 
   /**
-   * Get a map of collection name vs DocCollection objects
-   *
-   * <p>Implementation note: This method resolves the collection reference by calling {@link
-   * CollectionRef#get()} which can make a call to ZooKeeper. This is necessary because the
-   * semantics of how collection list is loaded have changed in SOLR-6629.
-   *
-   * @return a map of collection name vs DocCollection object
+   * The collection names. Like a Set but might not implement it. Immutable; non-null. Some names
+   * returned might not resolve via {@link #getCollectionOrNull(String)}, so consider this a close
+   * approximation.
    */
-  public Map<String, DocCollection> getCollectionsMap() {
-    Map<String, DocCollection> result = CollectionUtil.newHashMap(collectionStates.size());
-    for (Entry<String, CollectionRef> entry : collectionStates.entrySet()) {
-      DocCollection collection = entry.getValue().get();
-      if (collection != null) {
-        result.put(entry.getKey(), collection);
-      }
-    }
-    return result;
+  public Collection<String> getCollectionNames() {
+    // should we document we are sorted too?  Albeit that ties our hands.
+    return immutableCollectionStates.keySet();
   }
 
   /** Get names of the currently live nodes. */
   public Set<String> getLiveNodes() {
-    return Collections.unmodifiableSet(liveNodes);
+    return liveNodes;
   }
 
   @Deprecated
-  public String getShardId(String nodeName, String coreName) {
-    return getShardId(null, nodeName, coreName);
-  }
-
-  @Deprecated
-  public String getShardId(String collectionName, String nodeName, String coreName) {
-    if (coreName == null || nodeName == null) {
-      return null;
-    }
-    Collection<CollectionRef> states = Collections.emptyList();
-    if (collectionName != null) {
-      CollectionRef c = collectionStates.get(collectionName);
-      if (c != null) states = Collections.singletonList(c);
-    } else {
-      states = collectionStates.values();
-    }
-
-    for (CollectionRef ref : states) {
-      DocCollection coll = ref.get();
-      if (coll == null) continue; // this collection got removed in between, skip
-      // TODO: for really large clusters, we could 'index' on this
-      return Optional.ofNullable(coll.getReplicas(nodeName)).stream()
-          .flatMap(List::stream)
-          .filter(r -> coreName.equals(r.getStr(ReplicaStateProps.CORE_NAME)))
-          .map(Replica::getShard)
-          .findAny()
-          .orElse(null);
-    }
-    return null;
-  }
-
   public Map<String, List<Replica>> getReplicaNamesPerCollectionOnNode(final String nodeName) {
     Map<String, List<Replica>> replicaNamesPerCollectionOnNode = new HashMap<>();
     collectionStates.values().stream()
@@ -218,8 +175,8 @@ public class ClusterState implements MapWriter {
         .filter(Objects::nonNull)
         .forEach(
             col -> {
-              List<Replica> replicas = col.getReplicas(nodeName);
-              if (replicas != null && !replicas.isEmpty()) {
+              List<Replica> replicas = col.getReplicasOnNode(nodeName);
+              if (!replicas.isEmpty()) {
                 replicaNamesPerCollectionOnNode.put(col.getName(), replicas);
               }
             });
@@ -252,6 +209,7 @@ public class ClusterState implements MapWriter {
    *     {@link ClusterState}
    * @return the ClusterState
    */
+  @Deprecated
   public static ClusterState createFromJson(
       int version,
       byte[] bytes,
@@ -259,7 +217,7 @@ public class ClusterState implements MapWriter {
       Instant creationTime,
       DocCollection.PrsSupplier prsSupplier) {
     if (bytes == null || bytes.length == 0) {
-      return new ClusterState(liveNodes, Collections.<String, DocCollection>emptyMap());
+      return new ClusterState(liveNodes, Map.of());
     }
     @SuppressWarnings({"unchecked"})
     Map<String, Object> stateMap =
@@ -268,10 +226,6 @@ public class ClusterState implements MapWriter {
   }
 
   @Deprecated
-  public static ClusterState createFromJson(int version, byte[] bytes, Set<String> liveNodes) {
-    return createFromJson(version, bytes, liveNodes, Instant.EPOCH, null);
-  }
-
   public static ClusterState createFromCollectionMap(
       int version,
       Map<String, Object> stateMap,
@@ -295,12 +249,9 @@ public class ClusterState implements MapWriter {
     return new ClusterState(collections, liveNodes);
   }
 
-  @Deprecated
-  public static ClusterState createFromCollectionMap(
-      int version, Map<String, Object> stateMap, Set<String> liveNodes) {
-    return createFromCollectionMap(version, stateMap, liveNodes, Instant.EPOCH, null);
-  }
-
+  /**
+   * @lucene.internal
+   */
   // TODO move to static DocCollection.loadFromMap
   public static DocCollection collectionFromObjects(
       String name,
@@ -322,7 +273,7 @@ public class ClusterState implements MapWriter {
       // legacy format from 4.0... there was no separate "shards" level to contain the collection
       // shards.
       slices = Slice.loadAllFromMap(name, objs);
-      props = Collections.emptyMap();
+      props = Map.of();
     } else {
       slices = Slice.loadAllFromMap(name, sliceObjs);
       objs.remove(CollectionStateProps.SHARDS);
@@ -366,63 +317,25 @@ public class ClusterState implements MapWriter {
   @Override
   public boolean equals(Object obj) {
     if (this == obj) return true;
-    if (!(obj instanceof ClusterState)) return false;
-    ClusterState other = (ClusterState) obj;
+    if (!(obj instanceof ClusterState other)) return false;
     if (liveNodes == null) {
       return other.liveNodes == null;
     } else return liveNodes.equals(other.liveNodes);
   }
 
-  /** Internal API used only by ZkStateReader */
+  /**
+   * @lucene.internal used only by ZkStateReader
+   */
   void setLiveNodes(Set<String> liveNodes) {
-    this.liveNodes = liveNodes;
+    this.liveNodes = Set.copyOf(liveNodes);
   }
 
   /**
-   * Be aware that this may return collections which may not exist now. You can confirm that this
-   * collection exists after verifying CollectionRef.get() != null
+   * Streams the resolved {@link DocCollection}s, which will often fetch from ZooKeeper for each one
+   * for a many-collection scenario. Use this sparingly; some users have thousands of collections!
    */
-  public Map<String, CollectionRef> getCollectionStates() {
-    return immutableCollectionStates;
-  }
-
-  /**
-   * Gets the set of allowed hosts (host:port) built from the set of live nodes. The set is cached
-   * to be reused.
-   */
-  public Set<String> getHostAllowList() {
-    if (hostAllowList == null) {
-      hostAllowList =
-          getLiveNodes().stream()
-              .map((liveNode) -> liveNode.substring(0, liveNode.indexOf('_')))
-              .collect(Collectors.toSet());
-    }
-    return hostAllowList;
-  }
-
-  /**
-   * Iterate over collections. Unlike {@link #getCollectionStates()} collections passed to the
-   * consumer are guaranteed to exist.
-   *
-   * @param consumer collection consumer.
-   */
-  public void forEachCollection(Consumer<DocCollection> consumer) {
-    collectionStates.forEach(
-        (s, collectionRef) -> {
-          try {
-            DocCollection collection = collectionRef.get();
-            if (collection != null) {
-              consumer.accept(collection);
-            }
-          } catch (SolrException e) {
-            if (e.getCause() != null
-                && e.getCause().getClass().getName().endsWith("NoNodeException")) {
-              // don't do anything. This collection does not exist
-            } else {
-              throw e;
-            }
-          }
-        });
+  public Stream<DocCollection> collectionStream() {
+    return collectionStates.values().stream().map(CollectionRef::get).filter(Objects::nonNull);
   }
 
   public static class CollectionRef {
@@ -438,7 +351,7 @@ public class ClusterState implements MapWriter {
     }
 
     /**
-     * Return the DocCollection, always refetching if lazy. Equivalent to get(false)
+     * Return the DocCollection, always re-fetching if lazy. Equivalent to get(false)
      *
      * @return The collection state modeled in zookeeper
      */
@@ -471,6 +384,7 @@ public class ClusterState implements MapWriter {
     }
   }
 
+  /** The approximate number of collections. */
   public int size() {
     return collectionStates.size();
   }
@@ -478,6 +392,9 @@ public class ClusterState implements MapWriter {
   private static volatile Function<JSONParser, ObjectBuilder> STR_INTERNER_OBJ_BUILDER =
       STANDARDOBJBUILDER;
 
+  /**
+   * @lucene.internal
+   */
   public static void setStrInternerParser(Function<JSONParser, ObjectBuilder> fun) {
     if (fun == null) return;
     STR_INTERNER_OBJ_BUILDER = fun;
