@@ -19,7 +19,6 @@ package org.apache.solr.common.util;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -30,8 +29,8 @@ import java.util.function.Function;
 
 /**
  * A very basic and lightweight json schema parsing and data validation tool. This custom tool is
- * created because a) we need to support non json inputs b) to avoiding double parsing (this accepts
- * an already parsed json as a map) It validates most aspects of json schema but it is NOT A FULLY
+ * created because 1) we need to support non json inputs 2) to avoiding double parsing (this accepts
+ * an already parsed json as a map). It validates most aspects of json schema, but it is NOT A FULLY
  * COMPLIANT JSON schema parser or validator. This validator borrow some design's idea from
  * https://github.com/networknt/json-schema-validator
  */
@@ -60,7 +59,7 @@ public class JsonSchemaValidator {
     }
   }
 
-  // This is a heterogeneous type, there's probably imrpovements to be had by using some concrete
+  // This is a heterogeneous type, there's probably improvements to be had by using some concrete
   // types instead
   static final Map<String, Function<Pair<Map<?, ?>, ?>, Validator<?>>> VALIDATORS = new HashMap<>();
 
@@ -271,7 +270,7 @@ class RequiredValidator extends Validator<List<String>> {
             return false;
           }
           String subprop = requiredProp.substring(requiredProp.indexOf('.') + 1);
-          if (!validate(((Map) o).get(requiredProp), errs, Collections.singleton(subprop))) {
+          if (!validate(((Map) o).get(requiredProp), errs, Set.of(subprop))) {
             return false;
           }
         } else {
@@ -339,8 +338,7 @@ class OneOfValidator extends Validator<List<String>> {
 
   @Override
   boolean validate(Object o, List<String> errs) {
-    if (o instanceof Map) {
-      Map<?, ?> map = (Map<?, ?>) o;
+    if (o instanceof Map<?, ?> map) {
       for (Object key : map.keySet()) {
         if (oneOfProps.contains(key.toString())) return true;
       }
