@@ -21,7 +21,6 @@ import static org.apache.solr.client.solrj.SolrRequest.METHOD.POST;
 import static org.apache.solr.common.params.CollectionAdminParams.PER_REPLICA_STATE;
 
 import java.lang.invoke.MethodHandles;
-import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -32,7 +31,6 @@ import org.apache.solr.client.solrj.response.CollectionAdminResponse;
 import org.apache.solr.client.solrj.response.SolrPingResponse;
 import org.apache.solr.cloud.MiniSolrCloudCluster;
 import org.apache.solr.cloud.SolrCloudTestCase;
-import org.apache.solr.common.MapWriterMap;
 import org.apache.solr.common.NavigableObject;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.embedded.JettySolrRunner;
@@ -51,6 +49,7 @@ import org.slf4j.LoggerFactory;
         + "org.apache.solr.common.cloud=INFO;"
         + "org.apache.solr.cloud.api.collections=INFO;"
         + "org.apache.solr.cloud.overseer=INFO")
+@SolrCloudTestCase.NoPrs
 public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
@@ -64,7 +63,6 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
             .addConfig(
                 "conf",
                 getFile("solrj")
-                    .toPath()
                     .resolve("solr")
                     .resolve("configsets")
                     .resolve("streaming")
@@ -97,7 +95,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       assertEquals(5, prs.states.size());
 
       // Test delete replica
-      Replica leader = c.getReplica((s, replica) -> replica.isLeader());
+      Replica leader = c.getReplicas().stream().filter(Replica::isLeader).findFirst().orElseThrow();
       CollectionAdminRequest.deleteReplica(testCollection, leader.shard, leader.getName())
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(testCollection, 2, 4);
@@ -132,7 +130,6 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
             .addConfig(
                 "conf",
                 getFile("solrj")
-                    .toPath()
                     .resolve("solr")
                     .resolve("configsets")
                     .resolve("streaming")
@@ -163,7 +160,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
           PerReplicaStatesOps.fetch(collectionPath, SolrCloudTestCase.cluster.getZkClient(), null);
       assertEquals(2, prs.states.size());
       c = cluster.getZkStateReader().getCollection(testCollection);
-      prs.states.forEachEntry((s, state) -> assertEquals(Replica.State.ACTIVE, state.state));
+      prs.states.forEach((s, state) -> assertEquals(Replica.State.ACTIVE, state.state));
 
       String replicaName = null;
       for (Replica r : c.getSlice("shard1").getReplicas()) {
@@ -191,41 +188,32 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
         PerReplicaStates.State st = prs.get(replicaName);
         assertNotEquals(Replica.State.ACTIVE, st.state);
         @SuppressWarnings("unchecked")
-        NavigableObject rsp =
-            new MapWriterMap(
-                (Map<String, Object>)
-                    Utils.fromJSON(
-                        SolrCloudTestCase.cluster
-                            .getZkClient()
-                            .getData(
-                                DocCollection.getCollectionPath(testCollection),
-                                null,
-                                null,
-                                true)));
+        var rsp =
+            NavigableObject.wrap(
+                Utils.fromJSON(
+                    SolrCloudTestCase.cluster
+                        .getZkClient()
+                        .getData(DocCollection.getCollectionPath(testCollection), null, null)));
 
         assertNull(
             rsp._get(
-                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node2/leader",
-                null));
+                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node2/leader"));
         assertNull(
             rsp._get(
-                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node2/state",
-                null));
+                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node2/state"));
         assertNull(
             rsp._get(
-                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node4/leader",
-                null));
+                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node4/leader"));
         assertNull(
             rsp._get(
-                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node4/state",
-                null));
+                "cluster/collections/prs_restart_test/shards/shard1/replicas/core_node4/state"));
 
         jsr.start();
         cluster.waitForActiveCollection(testCollection, 1, 2);
         prs =
             PerReplicaStatesOps.fetch(
                 collectionPath, SolrCloudTestCase.cluster.getZkClient(), null);
-        prs.states.forEachEntry((s, state) -> assertEquals(Replica.State.ACTIVE, state.state));
+        prs.states.forEach((s, state) -> assertEquals(Replica.State.ACTIVE, state.state));
       }
 
     } finally {
@@ -241,13 +229,11 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
             .addConfig(
                 "conf",
                 getFile("solrj")
-                    .toPath()
                     .resolve("solr")
                     .resolve("configsets")
                     .resolve("streaming")
                     .resolve("conf"))
             .configure();
-    PerReplicaStates original = null;
     try {
       CollectionAdminRequest.createCollection(COLL, "conf", 3, 1)
           .setPerReplicaState(Boolean.TRUE)
@@ -255,42 +241,37 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       cluster.waitForActiveCollection(COLL, 3, 3);
 
       PerReplicaStates prs1 =
-          original =
-              PerReplicaStatesOps.fetch(
-                  DocCollection.getCollectionPath(COLL), cluster.getZkClient(), null);
+          PerReplicaStatesOps.fetch(
+              DocCollection.getCollectionPath(COLL), cluster.getZkClient(), null);
       log.info("prs1 : {}", prs1);
 
-      CollectionAdminRequest.modifyCollection(
-              COLL, Collections.singletonMap(PER_REPLICA_STATE, "false"))
+      CollectionAdminRequest.modifyCollection(COLL, Map.of(PER_REPLICA_STATE, "false"))
           .process(cluster.getSolrClient());
-      cluster
-          .getZkStateReader()
-          .waitForState(
-              COLL,
-              5,
-              TimeUnit.SECONDS,
-              (liveNodes, collectionState) ->
-                  "false".equals(collectionState.getProperties().get(PER_REPLICA_STATE)));
-      CollectionAdminRequest.modifyCollection(
-              COLL, Collections.singletonMap(PER_REPLICA_STATE, "true"))
+      waitForState(
+          "Waiting for PRS property",
+          COLL,
+          5,
+          TimeUnit.SECONDS,
+          collectionState ->
+              "false".equals(collectionState.getProperties().get(PER_REPLICA_STATE)));
+      CollectionAdminRequest.modifyCollection(COLL, Map.of(PER_REPLICA_STATE, "true"))
           .process(cluster.getSolrClient());
-      cluster
-          .getZkStateReader()
-          .waitForState(
-              COLL,
-              5,
-              TimeUnit.SECONDS,
-              (liveNodes, collectionState) -> {
-                AtomicBoolean anyFail = new AtomicBoolean(false);
-                PerReplicaStates prs2 =
-                    PerReplicaStatesOps.fetch(
-                        DocCollection.getCollectionPath(COLL), cluster.getZkClient(), null);
-                prs2.states.forEachEntry(
-                    (r, newState) -> {
-                      if (newState.getDuplicate() != null) anyFail.set(true);
-                    });
-                return !anyFail.get();
-              });
+      waitForState(
+          "Waiting for PRS property",
+          COLL,
+          5,
+          TimeUnit.SECONDS,
+          collectionState -> {
+            AtomicBoolean anyFail = new AtomicBoolean(false);
+            PerReplicaStates prs2 =
+                PerReplicaStatesOps.fetch(
+                    DocCollection.getCollectionPath(COLL), cluster.getZkClient(), null);
+            prs2.states.forEach(
+                (r, newState) -> {
+                  if (newState.getDuplicate() != null) anyFail.set(true);
+                });
+            return !anyFail.get();
+          });
 
     } finally {
       cluster.shutdown();
@@ -302,11 +283,10 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
     String PRS_COLL = "prs_test_coll2";
     MiniSolrCloudCluster cluster =
         configureCluster(3)
-            .withDistributedClusterStateUpdates(false, false)
+            .withOverseer(true)
             .addConfig(
                 "conf",
                 getFile("solrj")
-                    .toPath()
                     .resolve("solr")
                     .resolve("configsets")
                     .resolve("streaming")
@@ -317,7 +297,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       Stat stat = null;
       CollectionAdminRequest.createCollection(NONPRS_COLL, "conf", 10, 1)
           .process(cluster.getSolrClient());
-      stat = cluster.getZkClient().exists(DocCollection.getCollectionPath(NONPRS_COLL), null, true);
+      stat = cluster.getZkClient().exists(DocCollection.getCollectionPath(NONPRS_COLL), null);
       log.info("");
       // the actual number can vary depending on batching
       assertTrue(stat.getVersion() >= 2);
@@ -327,7 +307,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
           .setPerReplicaState(Boolean.TRUE)
           .process(cluster.getSolrClient());
       String PRS_PATH = DocCollection.getCollectionPath(PRS_COLL);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // +1 after all replica are added with on state.json write to CreateCollectionCmd.setData()
       assertEquals(1, stat.getVersion());
       // For each replica:
@@ -342,7 +322,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
           CollectionAdminRequest.addReplicaToShard(PRS_COLL, "shard1")
               .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(PRS_COLL, 10, 11);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // For the new replica:
       // +2 for state.json overseer writes, even though there's no longer PRS updates from
       // overseer, current code would still do a "TOUCH" on the PRS entry
@@ -362,7 +342,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       CollectionAdminRequest.deleteReplica(PRS_COLL, "shard1", addedReplica.getName())
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(PRS_COLL, 10, 10);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // For replica deletion
       // +1 for ZkController#unregister, which delete the PRS entry from data node
       // overseer, current code would still do a "TOUCH" on the PRS entry
@@ -371,7 +351,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       for (JettySolrRunner j : cluster.getJettySolrRunners()) {
         j.stop();
         j.start(true);
-        stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+        stat = cluster.getZkClient().exists(PRS_PATH, null);
         // ensure restart does not update the state.json, after addReplica/deleteReplica, 2 more
         // updates hence at version 3 on state.json version
         assertEquals(3, stat.getVersion());
@@ -389,11 +369,11 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
 
       // wait for the new replica to be active
       cluster.waitForActiveCollection(PRS_COLL, 10, 11);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // +1 for a new replica
       assertEquals(4, stat.getVersion());
       DocCollection c = cluster.getZkStateReader().getCollection(PRS_COLL);
-      Replica newreplica = c.getReplica((s, replica) -> replica.node.equals(j2.getNodeName()));
+      Replica newreplica = c.getReplicasOnNode(j2.getNodeName()).getFirst();
 
       // let's stop the old leader
       JettySolrRunner oldJetty = cluster.getReplicaJetty(leader);
@@ -411,7 +391,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
                       .get(newreplica.name)
                       .isLeader);
       PerReplicaStates prs = PerReplicaStatesOps.fetch(PRS_PATH, cluster.getZkClient(), null);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // the version should not have updated
       assertEquals(4, stat.getVersion());
     } finally {
